CI images update

--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-08-05 23:18:55
+lastsearch = 2024-08-06 03:30:08
 
 [zhangbrickshop.com]
 match = -133.3
@@ -94,7 +94,7 @@ url = https://www.vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-t
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 10
-url = https://www.diepxuan.com/chieu-lac-d2-10.html
+url = https://www.diepxuan.com/chieu-lac-d2-10.html?srsltid=AfmBOopt-l07vWyw0u76PaUL-HHpS9J7J6FBhctft4066eK5JvhHuUfF
 
 [visana.vn]
 match = -240.0%%
@@ -134,7 +134,7 @@ url = https://katinat.vn/cua-hang-2/
 [bibomart.com.vn]
 match = -13.3%%
 title = BioAmicus Vitamin D3K2
-url = https://bibomart.com.vn/bioamicus-vitamin-d3k2.html
+url = https://bibomart.com.vn/bioamicus-vitamin-d3k2.html?srsltid=AfmBOors-B8BKBn_Sv5vk-ab797eGFRw1ay2djWBCK_G_2p00fblyOBJ
 
 [www.nhathuocankhang.com]
 match = -220.0%%
@@ -364,7 +364,7 @@ url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/
 [vattumientay.com]
 match = -166.7%%
 title = Phe Gài Trục Thép D210 DIN 471 | vattumientay.com
-url = https://vattumientay.com/phe-gai-truc-thep-d210-din-471.p-5424.html
+url = https://vattumientay.com/phe-gai-truc-thep-d210-din-471.p-5424.html?srsltid=AfmBOor8P4gUMEmOj7yYNkMERZhZ94qNdViyqQlyjfL99Mw-hODwWqbH
 
 [mn-pvinh.tphue.thuathienhue.edu.vn]
 match = -126.7%%
