--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-08-06 02:13:52
+lastsearch = 2024-08-06 03:38:07
 
 [www.tui.co.uk]
-match = -40.0%%
-title = Flight and Travel Options
-url = https://www.tui.co.uk/destinations/info/travel-options
+match = -7.7%%
+title = Flight Status
+url = https://www.tui.co.uk/flight/arrivals-and-departures
 
 [www.travelgossip.co.uk]
 match = 0.0%%
@@ -22,8 +22,8 @@ title = Live TUI Airways Flight Status
 url = https://www.flightaware.com/live/fleet/TOM
 
 [www.cruisetimetables.com]
-match = -160.0%%
-title = Singapore Cruise Ship Schedule 15 February 2024
+match = -200.0%%
+title = Singapore Cruise Ship Schedule 15 February 2024 | ...
 url = https://www.cruisetimetables.com/singaporeschedule-15feb2024.html
 
 [www.partstown.com]
@@ -82,13 +82,13 @@ title = World's leading tourism business TUI Group set to grow in ...
 url = https://www.tuigroup.com/en-en/media/press-releases/2015/20151125-worlds-leading-tourism-business-tui-group-set-to-grow-in-south-east-asia
 
 [www.seascanner.com]
-match = -140.0%%
-title = Asia Cruise with Mein Schiff 6 on 12/02/2025
+match = -220.0%%
+title = Asia Cruise with Mein Schiff 6 14 days from/to Singapore ...
 url = https://www.seascanner.com/cruise-k235506-asia-mein-schiff-6-singapore
 
 [www.cruisemapper.com]
-match = -180.0%%
-title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026
+match = -220.0%%
+title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026 | ...
 url = https://www.cruisemapper.com/cruise-lines/TUI-Cruises-32
 
 [www.mybaggage.com]
