--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-08-05 22:42:10
+lastsearch = 2024-08-06 03:28:44
 
 [demxanh.com]
-match = 26.1%%
-title = Chăn lông 3kg mã 02 - Hà Nội
-url = https://demxanh.com/chan-long-3kg-ma-02.html
+match = 26.3%%
+title = Chăn lông 5kg mã 02
+url = https://demxanh.com/chan-long-5kg-ma-02.html
 
 [shopee.vn]
 match = 43.5%%
@@ -17,9 +17,9 @@ title = Chăn lông KQ đẹp loại 5kg
 url = https://shopee.vn/Chăn-lông-KQ-đẹp-loại-5kg-i.67105795.1540972315
 
 [www.diepxuan.com]
-match = 8.7%%
-title = Chăn KQ không sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html
+match = 26.1%%
+title = Chăn KQ sóng 5kg - Điệp Xuân
+url = https://www.diepxuan.com/chan-kq-song-5kg.html
 
 [thegioidemonline.com]
 match = 45.0%%
@@ -27,9 +27,9 @@ title = Chăn lông KQ cao cấp
 url = https://thegioidemonline.com/chan-long-kq-ma-01.html
 
 [www.youtube.com]
-match = -87.0%%
-title = Nấu Nồi Lẩu Mắm Đầu Năm Nhúng Bắp Chuối Hột Ăn Một ...
-url = https://www.youtube.com/watch?v=_urBtuvQ-kQ
+match = -100.0%%
+title = Bang Chan vibing to cool music while his computer kinda ...
+url = https://www.youtube.com/watch?v=rezmW8IDkRk
 
 [phongkhongkhongquan.vn]
 match = -82.6%%
@@ -152,8 +152,8 @@ title = SUY TỦY XƯƠNG
 url = https://bthh.org.vn/74/suy-tuy-xuong-282.html
 
 [www.staleyfarmshomeskc.com]
-match = -104.3%%
-title = News Staley Farms Private Golf Community Kansas City MO
+match = -143.5%%
+title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn--b1aktidr.xn--p1ai/54138796bzlqkz-modelscomk3fe43a
 
 [nhidong.org.vn]
