--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-06 02:17:17
+lastsearch = 2024-08-06 03:39:07
 
 [shopee.vn]
-match = -126.3%%
-title = Chiếu trúc chiếu tre cho trẻ em, chieu truc hat nằm đẹp ...
-url = https://shopee.vn/Chiếu-trúc-chiếu-tre-cho-trẻ-em-chieu-truc-hat-nằm-đẹp-mát-an-toàn-i.49212472.796826351
+match = -36.8%%
+title = Chiếu trúc, chiếu tre HT nan nhỏ siêu mát
+url = https://shopee.vn/Chiếu-trúc-chiếu-tre-HT-nan-nhỏ-siêu-mát-i.141565512.24776596764
 
 [chieutrelanlan.com]
 match = -105.3%%
@@ -17,9 +17,9 @@ title = Chiếu tre hạt vàng cao cấp mắt mai không viền 1m4x1m9
 url = https://chieutrelanlan.com/chieu-tre-hat-vang-cao-cap-mat-mai-khong-vien-1m4x1m9-85.html
 
 [vongxepsaigon.vn]
-match = -100.0%%
-title = Chiếu trúc chiếu tre 1m2 hạt nâu đen hàng tốt loại 1
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-1m2-hat-nau-den-hang-tot-loai-1/
+match = -121.1%%
+title = Chiếu trúc chiếu tre hạt vàng trắng loại 1 hàng tốt 140cm
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-vang-trang-loai-1-hang-tot-140cm/
 
 [chieutrelinhchi.com]
 match = -89.5%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ không viền màu vàng Size: 1mx1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m/chieu-truc-hat-nho-khong-vien-mau-vang-1mx1m9-94.html
 
 [www.youtube.com]
-match = -115.8%%
-title = Ca Nhạc Thiếu Nhi Vui Nhộn 🌞Bé Khoẻ Bé Ngoan 🎵 Em Bé ...
-url = https://www.youtube.com/watch?v=ZCV14D2HeDA
+match = -131.6%%
+title = MƯA HÈ ♫ Tú Anh - Nhạc Thiếu Nhi Mùa Hè Vui Nhộn Cho ...
+url = https://www.youtube.com/watch?v=ZbNN7ZZ1YOk
 
 [dochoihoangthu.com]
 match = -121.1%%
