--- a/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-18.html
 lastopen = 2024-06-09 22:26:11
 
 [search]
-lastsearch = 2024-08-06 01:44:38
+lastsearch = 2024-08-06 03:44:58
 
 [demxanh.com]
 match = -3.3%%
@@ -27,9 +27,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [suongtuyet.com]
-match = 16.7%%
-title = có nên sử dụng chiếu điều hòa không?
-url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
+match = -13.3%%
+title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
+url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [demchinhhang.com]
 match = 56.7%%
@@ -67,9 +67,9 @@ title =
 url = https://thegioidemtot.vn/434-chieu-dieu-hoa.html
 
 [www.youtube.com]
-match = -23.3%%
-title = Review chiếu điều hòa cao su non và vài món mua trên Sốp ...
-url = https://www.youtube.com/watch?v=1UjrRLNjJ7o
+match = -46.7%%
+title = Thực hư về khả năng làm mát của chiếu điều hòa | An toàn ...
+url = https://www.youtube.com/watch?v=ccaTWASdw7I
 
 [fptshop.com.vn]
 match = 0.0%%
