--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-08-06 02:59:50
+lastsearch = 2024-08-06 03:37:27
 
 [phana.com.vn]
 match = -90.9%%
@@ -17,9 +17,9 @@ title = Giường 1,8mx2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
-match = -281.8%%
-title = Có bán Đệm giường đôi lớn tại Minneapolis, Minnesota
-url = https://www.facebook.com/marketplace/minneapolis/queen-mattresses/?locale=vi_VN
+match = -290.9%%
+title = Khung giường bằng kim loại gần Minneapolis, Minnesota
+url = https://www.facebook.com/marketplace/minneapolis/metal-bed-frames/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -74,7 +74,7 @@ url = https://en.bab.la/dictionary/vietnamese-english/giường
 [jangin.vn]
 match = -354.5%%
 title = Giường Mika Q(1.6m) Chân cao - 장인가구 - Nội Thất Hàn ...
-url = https://jangin.vn/shop/giuong-mika-q1-6m-chan-cao/?srsltid=AfmBOop2KIXB_vXIXF9ZZEsl7Uzp8ukhrL9BGnm1r6Jbq-_s7U6QWQLQ
+url = https://jangin.vn/shop/giuong-mika-q1-6m-chan-cao/
 
 [www.litera.com]
 match = 0.0%%
