--- a/images/tham-chan-len-xu-1-60x90/config.ini
+++ b/images/tham-chan-len-xu-1-60x90/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-60x90.html
 lastopen = 2024-06-07 00:36:31
 
 [search]
-lastsearch = 2024-08-06 01:38:18
+lastsearch = 2024-08-06 03:30:50
 
 [shopee.vn]
-match = 4.2%%
-title = THẢM CHÙI CHÂN WELCOME CỠ ĐẠI 60x90CM, ...
-url = https://shopee.vn/THẢM-CHÙI-CHÂN-WELCOME-CỠ-ĐẠI-60x90CM-Thảm-lau-chân-Khách-Sạn-Siêu-Thị-Điện-Máy-Tòa-Nhà-Lớn-i.164381765.7711779537
+match = -29.2%%
+title = THẢM CHÙI CHÂN NỈ 60x90cm ĐẾ CAO SU CHỐNG ...
+url = https://shopee.vn/THẢM-CHÙI-CHÂN-NỈ-60x90cm-ĐẾ-CAO-SU-CHỐNG-TRƠN-TRƯỢT-THAM-CHÙI-CHÂN-SỢI-LEN--i.164381765.7711423471
 
 [thamsofanhapkhau.com]
 match = -87.5%%
@@ -67,9 +67,9 @@ title = THẢM CHÂN SHOWER ROOM 60X90 CM
 url = https://cauhaihomedecor.vn/tham-chan-shower-room-60x90-cm
 
 [thamvinhthuan.com]
-match = 37.5%%
-title = Thảm chùi chân STRIPEMAT
-url = https://thamvinhthuan.com/san-pham/tham-chui-chan-stripemat/
+match = 31.8%%
+title = Thảm chùi chân WELCOME
+url = https://thamvinhthuan.com/san-pham/tham-chui-chan-welcome/
 
 [thamnhuachuichan.com]
 match = -20.8%%
