--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-08-06 01:40:04
+lastsearch = 2024-08-06 03:39:50
 
 [demxanh.com]
 match = 0.0%%
@@ -27,13 +27,13 @@ title = Tìm Hiểu Kích Thước Giường Ngủ Các Loại
 url = https://noithatkenli.vn/kich-thuoc-giuong-ngu-cac-loai/
 
 [ru9.vn]
-match = -86.4%%
-title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
+match = -90.9%%
+title = Cách Tính Diện Tích, Kích Thước Các Loại Giường Ngủ
 url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [cafeland.vn]
-match = -45.5%%
-title = Kích thước giường ngủ chuẩn theo phong thủy
+match = -109.1%%
+title = Kích thước giường ngủ chuẩn theo phong thủy - CafeLand.Vn
 url = https://cafeland.vn/xu-huong/kich-thuoc-giuong-ngu-chuan-theo-phong-thuy-91091.html
 
 [www.diepxuan.com]
@@ -57,8 +57,8 @@ title = ++| A M V - Member Profile: carot22
 url = https://www.animemusicvideos.org/members/members_myprofile.php?user_id=1222186
 
 [jysk.vn]
-match = -72.7%%
-title = Kích thước giường ngủ tiêu chuẩn và thông dụng ...
+match = -118.2%%
+title = Kích thước giường ngủ tiêu chuẩn và thông dụng nhất hiện nay
 url = https://jysk.vn/kich-thuoc-giuong-ngu
 
 [anawood.vn]
