--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-08-06 02:22:32
+lastsearch = 2024-08-06 03:29:26
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -27,9 +27,9 @@ title = Li Zhang, PhD
 url = https://profiles.ucsf.edu/li.zhang
 
 [www.ncbi.nlm.nih.gov]
-match = -173.7%%
-title = Evaluation of the Extent of Variant Histology in Urothelial ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8988952/
+match = -73.7%%
+title = EFFECTS OF MUSCLE STRENGTHENING AND ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8814870/
 
 [www.lebow.drexel.edu]
 match = -126.3%%
@@ -37,9 +37,9 @@ title = Shawkat Hammoudeh, PhD - LeBow College of Business
 url = https://www.lebow.drexel.edu/people/shawkathammoudeh
 
 [profiles.ucsd.edu]
-match = -10.5%%
-title = Gary Vilke | UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -21.4%%
+title = Kathleen Fisch
+url = https://profiles.ucsd.edu/kathleen.fisch
 
 [medboard.nv.gov]
 match = -136.8%%
@@ -405,4 +405,9 @@ url = https://cps-vo.org/group/satc-pimtg22/registrants
 match = 0.0%%
 title = 
 url = https://www.prnewswire.com/news-releases/announcing-the-2024-us-presidential-scholars-in-the-arts-302141477.html
+
+[dcc.ligo.org]
+match = -152.6%%
+title = https://dcc.ligo.org/public/0150/M1800027/005/LSC-...
+url = https://dcc.ligo.org/public/0150/M1800027/005/LSC-Authors-Feb-2018.tex
 
