CI images update

--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-08-06 02:41:46
+lastsearch = 2024-08-06 03:50:40
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -395,4 +395,9 @@ url = http://www.worldfzo.org/appBCcdKG1FHA
 match = -214.3%%
 title = Lịch bay từ Vịnh Xanh (Green Bay) đến Manchester | GRB
 url = https://www.wego.vn/lich-bay/grb/man/chuyen-bay-re-nhat-tu-green-bay-den-manchester
+
+[www.premera.com]
+match = -35.7%%
+title = Premera Blue Cross: Home
+url = https://www.premera.com/
 
