--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-06 02:50:26
+lastsearch = 2024-08-06 03:44:28
 
 [tiki.vn]
 match = -138.9%%
@@ -32,9 +32,9 @@ title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
-match = -144.4%%
-title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 713 - CHÍNH HÃNG ...
-url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-713-chinh-hang-cao-cap
+match = -116.7%%
+title = Bộ Ga (Drap) Nệm Cotton Đặc Biệt Edena Mẫu 524
+url = https://nemkimtrang.com/bo-ga-drap-nem-cotton-dac-biet-edena-mau-524-chinh-hang-cao-cap
 
 [demxanh.com]
 match = -72.2%%
@@ -42,19 +42,19 @@ title = Bộ ga chun Cotton chống thấm màu xanh đậm
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
 
 [foreverbedding.net]
-match = -66.7%%
-title = Bộ ga phủ Passion A112 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-passion-a112
+match = -61.1%%
+title = Bộ ga phủ Common C83 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-common-c83
 
 [aeoneshop.com]
 match = -105.6%%
 title = Bộ Chăn Ga Gối Làm Mát Gấu Hóme Cóordy SS24 ...
-url = https://aeoneshop.com/product/29675/bo-chan-ga-goi-lam-mat-gau-ss24-160x200-mau-xam?srsltid=AfmBOopsp8i8rhEl8jiZgEpx5Yn9xCJaUIqSFabPUiM5PLOiPBZtuqZj
+url = https://aeoneshop.com/product/29675/bo-chan-ga-goi-lam-mat-gau-ss24-160x200-mau-xam
 
 [everonvn.com.vn]
-match = -105.6%%
-title = Bộ Everon Esm-20011 - chăn ga gối đệm Everon
-url = https://everonvn.com.vn/everon/809/bo-everon-esm-20011
+match = 16.7%%
+title = Bộ Everon Epm-19061
+url = https://everonvn.com.vn/everon/752/bo-everon-epm19061
 
 [www.everonvni.vn]
 match = -77.8%%
@@ -97,9 +97,9 @@ title = Bộ Phủ L'amour Living LV10
 url = https://demviethome.vn/bo-phu-lamour-living-lv10/
 
 [leflair.com]
-match = -66.7%%
-title = Bộ Drap & Chăn Chần Cotton 160x200 (5 Món)...
-url = https://leflair.com/en/shop/bo-drap-chan-chan-cotton-160x200-5-mon-15916
+match = -61.1%%
+title = Bộ Drap & Vỏ Chăn Cotton 160x200 (5 Món)...
+url = https://leflair.com/en/shop/delete-bo-drap-vo-chan-cotton-160x200-5-mon-3285
 
 [ninhouse.vn]
 match = -161.1%%
