--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-08-06 01:50:12
+lastsearch = 2024-08-06 03:48:35
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -17,9 +17,9 @@ title = Lưu trữ 200×220 - Trang 14 trên 21 ... - Đệm Dreamland
 url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 
 [demxanh.com]
-match = -6.5%%
-title = Đệm bông ép Dreamland chống thoái hóa cột sống
-url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html
+match = 35.5%%
+title = Ga chống thấm đa năng Olympia 2 trong 1
+url = https://demxanh.com/ga-chong-tham-da-nang-olympia-2-trong-1.html
 
 [dreamland.vn]
 match = -21.1%%
@@ -27,9 +27,9 @@ title = Chăn Tuyết Điều Hòa
 url = http://dreamland.vn/Chan-Tuyet-Dieu-Hoa-i4421.html
 
 [demxinh.vn]
-match = -35.5%%
-title = Đệm lò xo Canada Bencivenni (New) - bảo hành 15 năm
-url = https://demxinh.vn/dem-lo-xo-canada-bencivenni-new.html
+match = 9.7%%
+title = Chăn Ga Gối Dreamland Chính Hãng Giá Tốt
+url = https://demxinh.vn/chan-ga-goi-dreamland/
 
 [dongahome.vn]
 match = 3.2%%
@@ -42,9 +42,9 @@ title = Để chuyện phòng the lên đỉnh, bạn nên chọn loại nệm n
 url = https://vuanem.com/blog/de-chuyen-phong-the-len-dinh-chon-nem-nao.html
 
 [uannga.vn]
-match = 6.5%%
-title = ĐỆM OYASUMI ORIGINAL 1 TẤM dày 20cm
-url = https://uannga.vn/index.php/shops/dem/dem-oyasumi-original-1-tam-day-20cm.html
+match = -19.4%%
+title = Nhà phân phối Chăn Ga Gối Đệm Uân Nga Thái Nguyên
+url = https://uannga.vn/
 
 [www.diepxuan.com]
 match = 100.0%%
