--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-08-05 21:44:21
+lastsearch = 2024-08-06 03:49:34
 
 [www.amazon.com]
-match = -309.1%%
-title = Ghe Tham Nang Da [Explicit] : franchesca: Música Digital
-url = https://www.amazon.com/-/es/franchesca/dp/B09D3V162X
+match = -100.0%%
+title = Ghe da yeu thuong - Hugo Luân
+url = https://www.amazon.com/Ghe-thuong-Explicit-Hugo-Luân/dp/B0CM6V2CPL
 
 [chungauto.vn]
-match = -209.1%%
-title = Bọc ghế da công nghiệp cho ô tô hàng chuẩn
-url = https://chungauto.vn/ghe-da-cong-nghiep-oto-p995.html
+match = -372.7%%
+title = Bọc ghế da Simili ô tô hàng chất lượng | Giá tốt, trả góp 0%%
+url = https://chungauto.vn/boc-ghe-da-simili-cho-oto-p996.html
 
 [decoviet.vn]
 match = -200.0%%
@@ -27,9 +27,9 @@ title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
 url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
-match = -309.1%%
-title = Ghế xoay da trưởng phòng - SG903 - Nội thất Hòa Phát
-url = https://noithathoaphat.com/ghe-da-truong-phong-sg903
+match = -272.7%%
+title = SG350B | Ghế da trưởng phòng - Nội thất Hòa Phát
+url = https://noithathoaphat.com/ghe-da-truong-phong-sg350b
 
 [dandoxe.com]
 match = -154.5%%
@@ -87,9 +87,9 @@ title = Bọc Ghế Da Xe Tải - Mẫu Ghế Da Xe Ô Tô Tải
 url = https://dailyhyundai.com/boc-ghe-xe-tai-.html
 
 [zestechvn.com]
-match = -318.2%%
-title = Bảng giá : Lót sàn – Thảm lót chân – Bọc ghế da của Lavor
-url = https://zestechvn.com/bang-gia-lot-san-tham-lot-chan-boc-ghe-da-cua-lavor/
+match = 18.2%%
+title = Bọc ghế da ô tô
+url = https://zestechvn.com/san-pham/boc-ghe-da-o-to/
 
 [github.com]
 match = -81.8%%
