--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-08-06 03:28:24
+lastsearch = 2024-08-06 04:16:51
 
 [www.tiktok.com]
-match = -212.5%%
-title = trying out the new nars powermatte lipsticks ☺️. these are ...
-url = https://www.tiktok.com/@theoliviasaurusrex/video/7153242423961980165?lang=en
+match = -181.2%%
+title = use my discount code AYASCHANNEL1 on @YesStyle ...
+url = https://www.tiktok.com/@ayas.channel/video/7311712186034851078
 
 [digitalmaine.com]
 match = -75.0%%
