--- a/images/chieu-truc-den-khong-vien-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-18.html
 lastopen = 2024-06-07 00:19:24
 
 [search]
-lastsearch = 2024-08-06 02:51:08
+lastsearch = 2024-08-06 04:22:53
 
 [chieutrelanlan.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
 url = https://demxanh.com/chieu-truc-den.html
 
 [shopee.vn]
-match = -25.0%%
-title = Chiếu trúc 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/trúc/1m2
+match = -10.7%%
+title = Chiếu trúc - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/trúc
 
 [tongkhonem.com]
 match = 57.7%%
@@ -92,9 +92,9 @@ title = Tìm hiểu về quy trình để tạo nên sản phẩm chiếu trúc 
 url = https://chieutrucxinh.weebly.com/chia-se/category/mua-chi7871u-truacutec
 
 [h5.lazada.vn]
-match = -21.4%%
-title = chiếu tre 1,4*1,9m hạt vàng không viền hàng Việt Nam ...
-url = https://h5.lazada.vn/products/chieu-truc-chieu-tre-1419m-hat-vang-khong-vien-hang-viet-nam-sieu-re-i277132020.html
+match = 42.9%%
+title = Chiếu trúc 1,6*2m hạt nâu không viền
+url = https://h5.lazada.vn/products/chieu-truc-162m-hat-nau-khong-vien-i473062569.html
 
 [chieutrucchieutre.ete.vn]
 match = 32.1%%
@@ -145,4 +145,9 @@ url = https://www.vinmec.com/sitemap/posts-vi-7.xml
 match = -42.9%%
 title = Ti do - 11#nh phtic s6:35 %% /QD-UBND Binh Lieu, ng
 url = https://binhlieu.quangninh.gov.vn/Lists/TinTuc/Attachments/5282/3946 phê duyệt QH GPMB thôn pặc pùng.PDF
+
+[www.denlongsaigon.com]
+match = 46.4%%
+title = CHIẾU TRÚC - CHIẾU TRE VIỆT NAM
+url = https://www.denlongsaigon.com/tin-tuc/chieu-truc/chieu-tre-92.html
 
