--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-08-06 01:18:37
+lastsearch = 2024-08-06 04:23:14
 
 [www.tui.co.uk]
-match = -153.3%%
-title = Where We Fly | Flights with TUI 2024 / ...
-url = https://www.tui.co.uk/flight/where-we-fly
+match = -20.0%%
+title = Inflight Entertainment
+url = https://www.tui.co.uk/info/inflight-entertainment
 
 [cruisepanda.com]
 match = -213.3%%
 title = 14 Night Asia Cruise On Mein Schiff 5 Departing From ...
-url = https://cruisepanda.com/cruise-deals/14-night-asia-cruise-on-mein-schiff-5-departing-from-singapore-184
+url = https://cruisepanda.com/cruise-deals/14-night-asia-cruise-on-mein-schiff-5-departing-from-singapore-135
 
 [www.changiairport.com]
 match = -213.3%%
@@ -79,7 +79,7 @@ url = https://www.flightaware.com/live/flight/TOM58/history/20240214/1945Z/EGKK/
 [www.teddyblake.com]
 match = -260.0%%
 title = Teddy Blake: Luxury Designer Bags, 100%% Made In Italy, Fair ...
-url = https://www.teddyblake.com/?srsltid=AfmBOooVQAhOiYXpzFZrneTjVRz5T-Qb1gXQ5V0U1I92SM62l15TtyHM
+url = https://www.teddyblake.com/
 
 [www.skyscanner.com.sg]
 match = -93.3%%
