--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-08-06 03:38:07
+lastsearch = 2024-08-06 04:31:39
 
 [www.tui.co.uk]
-match = -7.7%%
-title = Flight Status
-url = https://www.tui.co.uk/flight/arrivals-and-departures
+match = -86.7%%
+title = Top things to do in Singapore | Discover
+url = https://www.tui.co.uk/discover/top-things-to-do-singapore
 
 [www.travelgossip.co.uk]
 match = 0.0%%
@@ -82,13 +82,13 @@ title = World's leading tourism business TUI Group set to grow in ...
 url = https://www.tuigroup.com/en-en/media/press-releases/2015/20151125-worlds-leading-tourism-business-tui-group-set-to-grow-in-south-east-asia
 
 [www.seascanner.com]
-match = -220.0%%
-title = Asia Cruise with Mein Schiff 6 14 days from/to Singapore ...
+match = -140.0%%
+title = Asia Cruise with Mein Schiff 6 on 12/02/2025
 url = https://www.seascanner.com/cruise-k235506-asia-mein-schiff-6-singapore
 
 [www.cruisemapper.com]
-match = -220.0%%
-title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026 | ...
+match = -180.0%%
+title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026
 url = https://www.cruisemapper.com/cruise-lines/TUI-Cruises-32
 
 [www.mybaggage.com]
