--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-06 03:44:16
+lastsearch = 2024-08-06 04:21:05
 
 [ninhouse.vn]
-match = -146.2%%
-title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi-nam
+match = -161.5%%
+title = Mua Vỏ gối | Áo gối | Bao gối đẹp giá rẻ ...
+url = https://ninhouse.vn/collections/vo-goi
 
 [www.lamido.vn]
 match = 46.2%%
@@ -48,8 +48,8 @@ url = https://shopykhoa.com/ultrasheer-sieu-mong-vo-goi-mau-da-kin-ngon-sp101.ht
 
 [tiki.vn]
 match = -253.8%%
-title = Ga Gối Cotton Tici Kẻ Mẫu Mới Nhất (01 Ga, 02 Vỏ Gối Nằm)
-url = https://tiki.vn/ga-goi-cotton-tici-ke-mau-moi-nhat-01-ga-02-vo-goi-nam-nhap-khau-khong-bai-xu-khong-phai-mau-p140019661.html
+title = Mua (Đẹp vô cùng) Áo gối ôm, vỏ gối ôm loại to mẫu Kẻ ...
+url = https://tiki.vn/dep-vo-cung-ao-goi-om-vo-goi-om-loai-to-mau-ke-den-bao-goi-dai-poly-cotton-30x100cm-loai-dep-p176866955.html?spid=176867980
 
 [gonbedding.vn]
 match = -15.4%%
@@ -94,7 +94,7 @@ url = https://songhong.info/vo-goi-om-song-hong-38x100-cotton
 [www.lazada.vn]
 match = -38.5%%
 title = Vỏ Gối Kẻ Tím Giá Tốt T04/2024
-url = https://www.lazada.vn/tag/vo-goi-ke-tim/?srsltid=AfmBOorPfS_GeCmOgNBGfOiPX5iEAfiMO7-7z5S6SXlSWtpB7PcYj2-j
+url = https://www.lazada.vn/tag/vo-goi-ke-tim/
 
 [flexhouse.vn]
 match = -207.7%%
