CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-06 03:45:11
+lastsearch = 2024-08-06 05:13:01
 
 [scholar.google.com]
 match = -43.8%%
@@ -82,9 +82,9 @@ title = Bật mí số đo 3 vòng chuẩn của nữ theo chiều cao, cân ...
 url = https://ivymoda.com/tin-tuc/bai-viet/so-do-3-vong-chuan-cua-nu-873
 
 [gamek.vn]
-match = -175.0%%
-title = Phim chưa chiếu đã gây sốc vì cảnh nóng của học sinh ...
-url = https://gamek.vn/phim-chua-chieu-da-gay-soc-vi-canh-nong-cua-hoc-sinh-netizen-nem-da-gay-gat-phan-cam-qua-roi-day-178240604102939863.chn
+match = -212.5%%
+title = Gần 50 nữ streamer làm nội dung 18+, khiêu dâm phải trả ...
+url = https://gamek.vn/gan-50-nu-streamer-lam-noi-dung-18-khieu-dam-phai-tra-gia-dat-178240804170152042.chn
 
 [www.google.com]
 match = -112.5%%
@@ -687,9 +687,9 @@ title = Xinh Núm Tình Trên Lộ Bigo Vô Gái
 url = https://kristin-gildemeister.de/4721414-xinh-gái-tình-vô-lộ-núm-trên-bigo.html
 
 [www.momo.vn]
-match = -37.5%%
-title = Lịch chiếu phim CGV Aeon Tân Phú
-url = https://www.momo.vn/cinema/rap/cgv/cgv-aeon-tan-phu-21
+match = -18.8%%
+title = Lịch chiếu phim Lotte Cinema
+url = https://www.momo.vn/cinema/rap/lotte-cinema
 
 [baotintuc.vn]
 match = -37.5%%
