--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-08-06 02:55:21
+lastsearch = 2024-08-06 05:15:26
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -42,9 +42,9 @@ title = Bảo hộ Chỉ dẫn địa lý “Cao Bằng” cho sản phẩm trú
 url = https://ipvietnam.gov.vn/tin-tuc-su-kien/-/asset_publisher/7xsjBfqhCDAV/content/bao-ho-chi-dan-ia-ly-cao-bang-cho-san-pham-truc-sao-va-chieu-truc-s-2/pop_up?_101_INSTANCE_7xsjBfqhCDAV_viewMode=print
 
 [chieutrelanlan.com]
-match = 9.5%%
-title = Chiếu trúc cao cấp Thái Lan 1m6x200cm
-url = https://chieutrelanlan.com/chieu-truc-cao-cap-thai-lan-1m6x2m-87.html
+match = -114.3%%
+title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
+url = https://chieutrelanlan.com/
 
 [thegioidemviet.vn]
 match = -23.8%%
@@ -267,9 +267,9 @@ title = Chấm dứt 17 năm đau ngực, khó thở nhờ bơm cồn sinh học
 url = https://www.fvhospital.com/tin-tuc/cham-dut-17-nam-dau-nguc-kho-tho-nho-bom-con-sinh-hoc/
 
 [www.sendo.vn]
-match = -42.9%%
-title = Chiếu Chiếu Trúc Gỗ Xịn Thái Lan 1,5mx1,9m Loại 1
-url = https://www.sendo.vn/chieu-chieu-truc-go-xin-thai-lan-1-5mx1-9m-loai-1-29295096.html
+match = -90.5%%
+title = Chiếu Trúc Hàn Quốc Hàng Hiệu, Giá Cực Tốt, Hot Nhất ...
+url = https://www.sendo.vn/chieu-truc-han-quoc.htm
 
 [langsontv.vn]
 match = -123.8%%
@@ -565,4 +565,9 @@ url = https://tamanhhospital.vn/tiem-chung/vac-xin-gardasil-4/
 match = -100.0%%
 title = Mông Thì To Bà đàn Sao - Nghĩa là mày rậm thì Apr
 url = https://issmitliebe.de/7808415-đàn-bà-mông-to-thì-sao.html
+
+[chieutrucvietnam.wordpress.com]
+match = 9.5%%
+title = Chiếu Trúc Việt Nam - WordPress.com
+url = https://chieutrucvietnam.wordpress.com/
 
