--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-08-06 00:57:55
+lastsearch = 2024-08-06 05:21:06
 
 [demxanh.com]
 match = -42.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 09
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-09.html
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 17
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-17.html
 
 [www.diepxuan.com]
 match = 10.7%%
-title = Điệp Xuân Ga chun chần ES1707 160x200
-url = https://www.diepxuan.com/ga-chun-chan-es1707-160x200.html
+title = Chiếu nhựa Hà Nội 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-180x200.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
