--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-08-06 03:41:30
+lastsearch = 2024-08-06 05:18:14
 
 [www.zillow.com]
 match = -115.4%%
@@ -17,9 +17,9 @@ title = Off to college? 4 legal forms for your 18-year-old - Blog
 url = https://blog.massmutual.com/planning/legal-forms-for-18-year-olds
 
 [www.imdb.com]
-match = -92.3%%
-title = Ginny & Georgia (TV Series 2021
-url = https://www.imdb.com/title/tt10813940/
+match = 0.0%%
+title = Silenced (2011)
+url = https://www.imdb.com/title/tt2070649/
 
 [aging.georgia.gov]
 match = -46.2%%
@@ -557,9 +557,9 @@ title = Chattahoochee Valley Libraries: Home
 url = https://www.cvlga.org/
 
 [www.reddit.com]
-match = -315.4%%
-title = [ART] Cover-art for Volume 18 of My Clueless First Friend ...
-url = https://www.reddit.com/r/manga/comments/1e7r1cn/art_coverart_for_volume_18_of_my_clueless_first/
+match = -215.4%%
+title = Maou no Ore ga Dorei Elf wo Yome ni Shitanda ga ...
+url = https://www.reddit.com/r/anime/comments/1df2ig0/maou_no_ore_ga_dorei_elf_wo_yome_ni_shitanda_ga/
 
 [books.google.com]
 match = -261.5%%
