--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-05 23:57:25
+lastsearch = 2024-08-06 05:17:51
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -352,9 +352,9 @@ title = buc anh dep - elle man - 18
 url = https://www.elleman.vn/van-hoa-giai-tri/buc-anh-dep-national-geographic-2018/attachment/screen-shot-2018-12-28-at-9-45-53-pm/
 
 [books.google.com]
-match = -217.6%%
-title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
-url = https://books.google.com/books?id=YfANAAAAQAAJ&pg=PA7&lpg=PA7&dq=man+in+hoa+dep+18&source=bl&ots=iNPx6ne6Kh&sig=ACfU3U0IrFqbqVeoQia5hqj8CrFGt_d-Xg&hl=en&sa=X&ved=2ahUKEwjvipyhw8SHAxX8F1kFHfU6DQQQ6AF6BAgXEAM
+match = -194.1%%
+title = Bradshaw's General Railway and Steam Navigation Guide for ...
+url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+18&source=bl&ots=rUQ6ExFz8-&sig=ACfU3U2LjFbDQFPPbO9rPFnslFvchsdPvw&hl=en&sa=X&ved=2ahUKEwjN6Iri8N6HAxXZtokEHcfvDnIQ6AF6BAgfEAM
 
 [www.bankrate.com]
 match = 0.0%%
@@ -570,4 +570,9 @@ url = https://casetext.com/case/hope-inc-v-lake-greenfield-homeowners-assn-1
 match = 0.0%%
 title = 
 url = https://coloradosun.com/2024/07/08/colorado-hoa-foreclosure-new-laws/
+
+[www.orlando.gov]
+match = -5.9%%
+title = Orlando Police Department
+url = https://www.orlando.gov/Our-Government/Departments-Offices/Orlando-Police-Department
 
