--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-06 04:21:05
+lastsearch = 2024-08-06 05:15:47
 
 [ninhouse.vn]
-match = -161.5%%
-title = Mua Vỏ gối | Áo gối | Bao gối đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi
+match = -146.2%%
+title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
+url = https://ninhouse.vn/collections/vo-goi-nam
 
 [www.lamido.vn]
 match = 46.2%%
@@ -22,9 +22,9 @@ title = Vietnamese to English Translator
 url = https://www.translate.com/vietnamese-english
 
 [ru9.vn]
-match = -107.7%%
-title = Bật Mí: Vỏ Gối Khách Sạn Dùng Loại Gì?
-url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi
+match = -253.8%%
+title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từng ...
+url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
 
 [www.reddit.com]
 match = -230.8%%
@@ -48,8 +48,8 @@ url = https://shopykhoa.com/ultrasheer-sieu-mong-vo-goi-mau-da-kin-ngon-sp101.ht
 
 [tiki.vn]
 match = -253.8%%
-title = Mua (Đẹp vô cùng) Áo gối ôm, vỏ gối ôm loại to mẫu Kẻ ...
-url = https://tiki.vn/dep-vo-cung-ao-goi-om-vo-goi-om-loai-to-mau-ke-den-bao-goi-dai-poly-cotton-30x100cm-loai-dep-p176866955.html?spid=176867980
+title = (Đẹp vô cùng) Áo gối ôm, vỏ gối ôm loại to mẫu Kẻ Đen ...
+url = https://tiki.vn/dep-vo-cung-ao-goi-om-vo-goi-om-loai-to-mau-ke-den-bao-goi-dai-poly-cotton-30x100cm-loai-dep-p176866955.html
 
 [gonbedding.vn]
 match = -15.4%%
@@ -82,9 +82,9 @@ title = Vietnamese-English dictionary - translation
 url = https://en.bab.la/dictionary/vietnamese-english/
 
 [shopee.vn]
-match = -153.8%%
-title = vỏ gối kê cổ giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-chan-ga-goi-poly-cottong-ke-ban-co-1m2x2m-them-vo-goi-om/5956463448930783855/2642071820174507179/ 
+match = -115.4%%
+title = Áo gối nằm (đôi) mẫu đẹp- Được chọn mẫu
+url = https://shopee.vn/Áo-gối-nằm-(đôi)-mẫu-đẹp-Được-chọn-mẫu-i.18452594.20233541354
 
 [songhong.info]
 match = -161.5%%
@@ -107,9 +107,9 @@ title = Top 5 các mẫu vỏ gối 35x50, 30x50 đẹp tại Elambo 2023
 url = https://elambo.vn/vo-goi-35x50-cm/
 
 [jysk.vn]
-match = -215.4%%
-title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri
+match = -238.5%%
+title = Vỏ Gối Nằm, Gối Ôm Bền Đẹp, Hiện Đại, Giá Rẻ - JYSK.vn
+url = https://jysk.vn/vo-goi
 
 [www.everonvn.vn]
 match = 15.4%%
