CI images update

--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-06 02:26:23
+lastsearch = 2024-08-06 05:40:22
 
 [www.tiktok.com]
 match = -11.8%%
@@ -69,7 +69,7 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 [books.google.com]
 match = -158.8%%
 title = The Monthly Army List - Page 23 - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdnndd2jX&sig=ACfU3U0bG36mbCGgzyimkttTFPCC4IaDYA&hl=en&sa=X&ved=2ahUKEwj08rOC09yHAxUNEzQIHfbADhYQ6AF6BAgcEAM
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdnnlb3fT&sig=ACfU3U3mQCA-Jlws_0zphLrjHJBCbM6R-w&hl=en&sa=X&ved=2ahUKEwiI667m9d6HAxWmnokEHazTMoQQ6AF6BAgYEAM
 
 [tax.vermont.gov]
 match = -29.4%%
@@ -429,7 +429,7 @@ url = https://hhlawoffice.com/basics-of-colorado-homeowners-association-hoa-law/
 [www.cedarmanagementgroup.com]
 match = 0.0%%
 title = 
-url = https://www.cedarmanagementgroup.com/duties-of-an-hoa-president/
+url = https://www.cedarmanagementgroup.com/trespassing-in-hoa/
 
 [billingsrpm.com]
 match = -200.0%%
@@ -645,4 +645,9 @@ url = https://chiaki.vn/tin-tuc/ten-con-gai-dep-va-y-nghia-may-man-cho-be
 match = 23.5%%
 title = LỌ HOA GỐM MEN L2.16
 url = https://binhdep.vn/lo-hoa-gom-men-l2-16
+
+[myboca.us]
+match = -123.5%%
+title = Building Permits and Inspections | Boca Raton, FL
+url = https://myboca.us/157/Building-Permits-and-Inspections
 
