--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-08-06 01:35:35
+lastsearch = 2024-08-06 05:30:53
 
 [demxanh.com]
-match = 6.9%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+match = 27.6%%
+title = Chiếu điều hòa cao su non Tencel vàng chanh
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-vang-chanh.html
 
 [leflair.com]
 match = 6.9%%
@@ -17,9 +17,9 @@ title = Bộ Chiếu Cao Su Điều Hòa Mix 180x200 (3 Món)...
 url = https://leflair.com/shop/delete-bo-chieu-cao-su-ieu-hoa-mix-180x200-3-mon-16379
 
 [www.lazada.vn]
-match = -17.2%%
-title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html
+match = -31.0%%
+title = chiếu điều hòa mát lạnh chiếu cao su non 5D Chich Studio ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-chieu-cao-su-non-chich-studio-mem-mai-thoang-matsize-160x200-180x200-220x200-i1975349002.html
 
 [tiki.vn]
 match = 20.7%%
