--- a/images/chieu-dieu-hoa-khong-goi-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-18.html
 lastopen = 2024-06-09 22:26:01
 
 [search]
-lastsearch = 2024-08-05 23:54:17
+lastsearch = 2024-08-06 05:45:15
 
 [demxanh.com]
 match = 0.0%%
@@ -47,9 +47,9 @@ title = Chiếu Điều Hoà Băng Lạnh (2 màu)
 url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 
 [foreverbedding.net]
-match = 0.0%%
-title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
+match = -44.4%%
+title = Giải Đáp Thắc Mắc Nên Mua Chiếu Điều Hòa Hay Chiếu Trúc?
+url = https://foreverbedding.net/nen-mua-chieu-dieu-hoa-hay-chieu-truc
 
 [mandep.vn]
 match = 37.0%%
@@ -62,9 +62,9 @@ title = Thực hư về khả năng làm mát của chiếu điều hòa | An to
 url = https://www.youtube.com/watch?v=ccaTWASdw7I
 
 [kyoryo.vn]
-match = -40.7%%
-title = Top 3 loại chiếu điều hòa cao cấp nhất thị trường - Kyoryo
-url = https://kyoryo.vn/tin-tuc/top-3-loai-chieu-dieu-hoa-cao-cap-nhat-thi-truong-.html
+match = 18.5%%
+title = Chiếu (Ga) Điều Hòa Viscose mát - Kyoryo
+url = https://kyoryo.vn/chieu-cao-cap/chieu-dieu-hoa-viscose.html
 
 [thegioinem.com]
 match = 7.4%%
@@ -155,4 +155,9 @@ url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-4/
 match = -7.4%%
 title = Ruiton_Chiếu điều hoà 1m6x2m (kèm 2 vỏ gối cao su)
 url = https://vtvhyundai.vn/shoppingMall/product/editcrruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su--2-goi-cao-su-non-30x50cm.30008392
+
+[baocaobang.vn]
+match = 3.7%%
+title = Chiếu điều hòa giải pháp cho mùa hè nắng nóng
+url = https://baocaobang.vn/chieu-dieu-hoa-giai-phap-cho-mua-he-nang-nong-3161410.html
 
