--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-08-05 23:15:26
+lastsearch = 2024-08-06 05:38:37
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -514,7 +514,7 @@ url = https://caselaw.vn/van-ban-phap-luat/255485-tieu-chuan-viet-nam-tcvn-7572-
 [www.pnj.com.vn]
 match = -100.0%%
 title = Lắc Tay, Vòng Tay Vàng PNJ| pnj.com.vn
-url = https://www.pnj.com.vn/lac-vong-tay/lac-vong-tay-vang/?srsltid=AfmBOoreeuRq36_wUhQBEMWz1he5id6onRhYQTFy1PKda21vm0Wz4S1_
+url = https://www.pnj.com.vn/lac-vong-tay/lac-vong-tay-vang/
 
 [primagold.com.vn]
 match = -218.8%%
