--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-08-06 04:23:36
+lastsearch = 2024-08-06 05:42:27
 
 [shopee.vn]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Mai Huyền - Chiếu nhựa cao cấp - Hanoi
 url = https://www.maihuyencorp.com/
 
 [www.lazada.vn]
-match = -31.0%%
-title = Chiếu Nhựa Thái Lan (1,5m , 1,6m , 1,8mx2m , 1,8mx3m, ...
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx2m-18mx3m18mx4m-2mx2m2-2mx3m-2mx4m-i1552808477.html
+match = -13.8%%
+title = ☫❉♤ Chiếu nhựa thái lan ăn cơm điều hoà gấp gọn đủ cỡ ...
+url = https://www.lazada.vn/products/chieu-nhua-thai-lan-an-com-dieu-hoa-gap-gon-du-co-2m-3m-4m-i1672912142.html
 
 [tiki.vn]
 match = -13.8%%
@@ -32,9 +32,9 @@ title = Chiếu Cói Thái Bình Rẻ Nhất Hà Nội
 url = https://www.facebook.com/chieucoithaibinhrenhathanoi/
 
 [www.sendo.vn]
-match = 0.0%%
-title = Chiếu Nhựa Thái Lan Hàng Xịn, Giá Xuất Xưởng, Với ...
-url = https://www.sendo.vn/chieu-nhua-thai-lan.htm
+match = 24.1%%
+title = Chiếu Nhựa Bền Đẹp, Giá Sốc, Bán Chạy Nhất
+url = https://www.sendo.vn/chieu-nhua.htm
 
 [chieuvietbac.blogspot.com]
 match = -20.7%%
