--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-08-06 03:37:27
+lastsearch = 2024-08-06 05:44:35
 
 [phana.com.vn]
-match = -90.9%%
-title = MN-G1-Giường 1 tay quay có bô
-url = https://phana.com.vn/mn-g1-giuong-1-tay-quay-co-bo
+match = 63.6%%
+title = Giường bệnh
+url = https://phana.com.vn/giuong-benh
 
 [tiki.vn]
 match = -190.9%%
@@ -17,9 +17,9 @@ title = Giường 1,8mx2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
-match = -290.9%%
-title = Khung giường bằng kim loại gần Minneapolis, Minnesota
-url = https://www.facebook.com/marketplace/minneapolis/metal-bed-frames/?locale=vi_VN
+match = -281.8%%
+title = Có bán Đệm giường đôi lớn tại Minneapolis, Minnesota
+url = https://www.facebook.com/marketplace/minneapolis/queen-mattresses/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Giường ngủ gỗ xoan 1,6m(Nệm 1,6m x2m)
 url = http://noithatdogodungduyen.com/giuong-ngu-1
 
 [shopee.vn]
-match = -263.6%%
-title = Giường 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/giường/1m2
+match = -254.5%%
+title = (Giá kho) Giường nắn chỉnh cột sống toàn thân MN1
+url = https://shopee.vn/(Giá-kho)-Giường-nắn-chỉnh-cột-sống-toàn-thân-MN1-i.282884587.11195056048
 
 [dogodelathanhhanoi.com]
 match = -245.5%%
@@ -107,9 +107,9 @@ title = Giường MN 5
 url = http://thietbimamnontienloc.com/san-pham/giuong-mn-5-253.html
 
 [www.airbnb.com.vn]
-match = -400.0%%
-title = Phòng tiêu chuẩn 1 giường đôi tại Millennium Minneapolis - Airbnb
-url = https://www.airbnb.com.vn/hotels/1059440610457947224
+match = -309.1%%
+title = Phòng 1 Giường cỡ King 2 Phòng tại Bloomington - Airbnb
+url = https://www.airbnb.com.vn/rooms/929459059736966278
 
 [freemeteo.cl]
 match = -281.8%%
@@ -117,9 +117,9 @@ title = Weather Xom Giuong (1) - Long term weather forecast
 url = https://freemeteo.cl/mobile/weather/xom-giuong-1/longterm/monthly/?gid=1561485&mn=7&language=english&country=vietnam
 
 [www.booking.com]
-match = -336.4%%
-title = Hampton Inn and Suites Minneapolis University Area, MN
-url = https://www.booking.com/hotel/us/hampton-inn-and-suites-minneapolis-university-area-mn.vi.html
+match = -290.9%%
+title = Country Inn & Suites by Radisson, Albertville, MN
+url = https://www.booking.com/hotel/us/country-inn-suites-albertville.vi.html
 
 [www.agoda.com]
 match = -354.5%%
@@ -132,9 +132,9 @@ title = Giường nệm xếp gọn kiểu dáng Hàn Quốc SUMIKA 339A, ...
 url = https://sumika.vn/giuong-nem-xep-gon-kieu-dang-han-quoc-sumika-339a-rong-90cm
 
 [thegioigiuonggap.com]
-match = -172.7%%
-title = Giường gấp nhập khẩu Nhật Bản (OTB-TRN)
-url = https://thegioigiuonggap.com/giuong-gap-nhat-ban-otb-trn/
+match = -72.7%%
+title = Giường gấp nhật bản (OTB-MN)
+url = https://thegioigiuonggap.com/giuong-gap-nhat-ban-otb-mn/
 
 [www.igea.com.vn]
 match = -300.0%%
