--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-06 02:22:51
+lastsearch = 2024-08-06 05:31:15
 
 [www.lazada.vn]
 match = -94.4%%
 title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/nem-sieu-nhe/
+url = https://www.lazada.vn/tag/nem-sieu-nhe/?srsltid=AfmBOoozKYZXHMGx0ja-qthQ45SZDowYJ2ZdVmEHFe9FMFG5_MCzgBfX
 
 [m.facebook.com]
 match = -161.1%%
@@ -87,9 +87,9 @@ title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
 url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.tiktok.com]
-match = -188.9%%
-title = let me cater to you with these easy nem nuong spring rolls ...
-url = https://www.tiktok.com/@marylantran/video/7303621361979755822?lang=en
+match = -77.8%%
+title = How Long to Cook Nem Nuong in Air Fryer
+url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
 
 [vi.wikipedia.org]
 match = -27.8%%
@@ -179,7 +179,7 @@ url = https://www.sec.gov/Archives/edgar/data/1606268/000119312514253996/0001193
 [www.pge.com]
 match = 0.0%%
 title = 
-url = https://www.pge.com/assets/pge/docs/account/billing-and-assistance/nem-bill-explainer.pdf
+url = https://www.pge.com/en/account/billing-and-assistance/understand-your-bill/net-energy-metering-bill.html
 
 [anta.com.vn]
 match = 0.0%%
