--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-08-06 00:59:21
+lastsearch = 2024-08-06 05:35:10
 
 [www.diepxuan.com]
 match = 5.9%%
 title = Điệp Xuân Ruột gối kê Korea 45x65
-url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html
+url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html?srsltid=AfmBOoprB01A48rnE_LtqlanpA46DiOx1Hh_9ut4dYBaFIKba-4D3rfG
 
 [entershopping.vn]
 match = -123.5%%
@@ -22,14 +22,14 @@ title = Ruột gối Microfiber Korea Virgin
 url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-131.html
 
 [shopee.vn]
-match = -58.8%%
-title = Đôi Ruột Gối Bông Hạt Korea Ép Hơi 50*70cm
-url = https://shopee.vn/🌱-Đôi-Ruột-Gối-Bông-Hạt-Korea-Ép-Hơi-50*70cm-i.125787394.5970171584
+match = 64.7%%
+title = Ruột gối ép hơi Korea
+url = https://shopee.vn/Ruột-gối-ép-hơi-Korea-i.86050283.1557277406
 
 [demxanh.com]
 match = -100.0%%
 title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
-url = https://demxanh.com/ruot-goi.html
+url = https://demxanh.com/ruot-goi.html?srsltid=AfmBOorETiTEAXbfyCr5pc_V1P29_EXKFmymLDrtb8hRkWH9T5dTr0h_
 
 [everonkorea.com]
 match = -100.0%%
@@ -49,12 +49,12 @@ url = https://sieuthidemonline.vn/ruot-goi-tua-50x50/
 [www.lazada.vn]
 match = -147.1%%
 title = Gối Ngủ MOSAM KOREA (Ruột Kèm Vỏ Gối) 35x55 cm có ...
-url = https://www.lazada.vn/products/goi-ngu-mosam-korea-ruot-kem-vo-goi-35x55-cm-co-khoa-keo-phu-hop-cho-be-di-hoc-nguoi-di-cong-trinhsinh-vien-i2334711515.html
+url = https://www.lazada.vn/products/goi-ngu-mosam-korea-ruot-kem-vo-goi-35x55-cm-co-khoa-keo-phu-hop-cho-be-di-hoc-nguoi-di-cong-trinhsinh-vien-i2334711515.html?srsltid=AfmBOoqcASGxpudpCWJpZBtiIAHhjL0QT3r_1EmxaC-FwvGMMfGEXKcH
 
 [www.hotdeal.vn]
 match = -111.8%%
 title = Combo 2 Ruột Gối Bông Ép Korea Hút Chân Không Hà Nội
-url = https://www.hotdeal.vn/ha-noi/nha-cua-doi-song/combo-2-ruot-goi-bong-ep-korea-hut-chan-khong-174420.html
+url = https://www.hotdeal.vn/ha-noi/nha-cua-doi-song/combo-2-ruot-goi-bong-ep-korea-hut-chan-khong-174420.html?srsltid=AfmBOorhAzNGE__58NHT-AJQPtJI5Qn2cBlxrpT7mafNWhm2xv0P9BU5
 
 [dienmaytinphong.com]
 match = -70.6%%
