--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-08-06 03:45:17
+lastsearch = 2024-08-06 05:39:20
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -47,9 +47,9 @@ title = Bộ giường tủ cổ điển nhập khẩu GR B15
 url = https://greenfurni.vn/bo-giuong-tu-co-dien-nhap-khau-gr-b15/
 
 [noithattana.vn]
-match = -60.0%%
-title = Bộ Giường Tủ Gỗ MDF Hiện Đại Nhập Khẩu TA-D15
-url = https://noithattana.vn/san-pham/bo-giuong-tu-go-mdf-hien-dai-nhap-khau-ta-d11/
+match = -140.0%%
+title = Bộ giường ngủ tân cổ điển giá rẻ đẹp, cao cấp nhập khẩu ...
+url = https://noithattana.vn/giuong-tu-tan-co-dien/
 
 [tiki.vn]
 match = -50.0%%
@@ -99,7 +99,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-ngu
 [everonvn.com.vn]
 match = -75.0%%
 title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOop9m64oWeBnAa7HBkH9VNtcn5C3ZZYRMMfWKZniAI3K5-mKso7b
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [noithatgiakhanh.net]
 match = -105.0%%
@@ -207,9 +207,9 @@ title = Thảm Trải Giường | Hanoi
 url = https://www.facebook.com/ShopThamTraiGiuong/
 
 [erado.vn]
-match = 0.0%%
-title = Giường ngủ bọc da mã AM3-01
-url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-boc-da-ma-am3-01.html?srsltid=AfmBOoo3EHgm1-RsEsDVommaCgBlZXDyg2MabnXIROjHyXM2OlqIuMfX
+match = -105.0%%
+title = Top Địa Chỉ Mua Giường Ngủ Cao Cấp Nhập Khẩu Uy Tín ...
+url = https://erado.vn/giuong-da-that-nhap-khau.html
 
 [www.diyaudio.com]
 match = -65.0%%
