--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-06 01:47:42
+lastsearch = 2024-08-06 05:41:03
 
 [demxanh.com]
-match = -27.3%%
-title = Thảm trải giường lông cừu TLC 07 - Đệm Xanh
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-07.html
+match = -22.7%%
+title = Thảm trải giường cao su non màu xanh nhạt
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
 
 [demre.com.vn]
 match = 18.2%%
-title = Thảm ghế thảm giường - Trang 5
-url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
+title = Bộ thảm ghế gỗ 1 dài 2 ngắn
+url = https://demre.com.vn/bo-tham-ghe-go-1-dai-2-ngan-6
 
 [decoviet.vn]
 match = 22.2%%
@@ -72,9 +72,9 @@ title = Thảm lông trải sàn lót sàn phòng khách trải giường phòng
 url = https://shopee.vn/Thảm-lông-trải-sàn-lót-sàn-phòng-khách-trải-giường-phòng-ngủ-thảm-lông-trắng-loang-mịn-chụp-ảnh-hình-tròn-vuông-1m6x2m-i.472596491.3194973741
 
 [www.kymdan.com]
-match = -68.2%%
-title = Vỏ bọc Kymdan UltimateCare (dùng cho nệm Xếp)
-url = https://www.kymdan.com/san-pham/vo-boc-nem-xep-kymdan-ultimatecare
+match = -18.2%%
+title = Nệm (mattress) Kymdan Deluxe
+url = https://www.kymdan.com/san-pham/nem-kymdan-deluxe
 
 [noithatkenli.vn]
 match = -27.3%%
