--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-08-05 18:20:01
+lastsearch = 2024-08-06 05:37:15
 
 [suongtuyet.com]
 match = 16.0%%
@@ -90,4 +90,9 @@ url = https://www.facebook.com/tuananh.vn/?locale=vi_VN
 match = -76.0%%
 title = These are two ingredients that I know aren't common in ...
 url = https://www.tiktok.com/@curiousaboutvietnam/video/7360734609560079658
+
+[demchatluong.com]
+match = -12.0%%
+title = Đệm bông ép Tuấn Anh Korea vỏ gấm 3 mảnh
+url = https://demchatluong.com/san-pham/dem-bong-ep-tuan-anh-korea-vo-gam-3-manh/
 
