--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-08-05 22:36:49
+lastsearch = 2024-08-06 05:36:13
 
 [www.youtube.com]
 match = -40.7%%
@@ -17,9 +17,9 @@ title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từn
 url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
 
 [jysk.vn]
-match = -37.0%%
-title = Vỏ Gối Nằm, Gối Ôm Bền Đẹp, Hiện Đại, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi
+match = -59.3%%
+title = Vỏ Chăn Ga Gối Trơn, Cotton Cao Cấp Bền, Đẹp Giá Rẻ | JYSK
+url = https://jysk.vn/bo-vo-chan-goi-cotton-det-tron?srsltid=AfmBOorJLlyYVwgd0nZTbL2PFtO60tWHpR4EwbIDO7UayoJEo4vf0cU0
 
 [elambo.vn]
 match = -3.7%%
@@ -44,7 +44,7 @@ url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-cha
 [demxanh.com]
 match = -44.4%%
 title = Chăn ga gối Olympia chính hãng giá rẻ nhất thị trường
-url = https://demxanh.com/chan-ga-goi-olympia.html
+url = https://demxanh.com/chan-ga-goi-olympia.html?srsltid=AfmBOoo-kxANN3A_1pGp8pkDAbZzVdzfMMMFnA4HnB9JoibzxUeh2RFF
 
 [www.thegioididong.com]
 match = -55.6%%
@@ -179,7 +179,7 @@ url = https://baoquangnam.vn/coi-vang-3137201.html
 [www.diepxuan.com]
 match = 51.9%%
 title = Vỏ gối kê xoa 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
+url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html?srsltid=AfmBOopHXdGZ_-LsVlXDyrJdRm5viCBQiBI4XSRiXwnFV6VgOIwO-gNL
 
 [demhong.vn]
 match = -22.2%%
@@ -189,7 +189,7 @@ url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 [dienmaycholon.com]
 match = -44.4%%
 title = Gối & Vỏ Gối SIMPLEHOME giá rẻ nhiều ưu đãi, giao hàng ...
-url = https://dienmaycholon.com/goi-vo-goi-simplehome
+url = https://dienmaycholon.com/goi-vo-goi-simplehome?srsltid=AfmBOoo_rd8wrjwE7-FXiFchaUFbwWeBKHlAXIB-1IqesODBRqQn26on
 
 [metruyen.me]
 match = 33.3%%
