CI images update

--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-08-06 02:49:22
+lastsearch = 2024-08-06 05:50:56
 
 [helloviettravel.com]
 match = -187.5%%
@@ -68,8 +68,8 @@ url = https://shadow.vn/nhung-vat-dung-can-thiet-khi-di-du-lich
 
 [mia.vn]
 match = -181.2%%
-title = Top 18 địa điểm du lịch DakLak nổi tiếng không thể bỏ lỡ
-url = https://mia.vn/cam-nang-du-lich/top-dia-diem-du-lich-daklak-noi-tieng-khong-the-bo-lo-5670
+title = Top 18 Điểm du lịch Hải Phòng tuyệt đẹp không thể bỏ qua
+url = https://mia.vn/cam-nang-du-lich/18-diem-du-lich-hai-phong-tuyet-dep-phan-4484
 
 [www.ivivu.com]
 match = -187.5%%
