--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-08-06 04:22:09
+lastsearch = 2024-08-06 05:45:41
 
 [tiki.vn]
 match = 16.0%%
@@ -44,7 +44,7 @@ url = https://www.roc-taiwan.org/vn_vi/index.html
 [books.google.com]
 match = -28.0%%
 title = Của Cải Của Các Dân Tộc - Google Books Result
-url = https://books.google.com/books?id=GP7LEAAAQBAJ&pg=PT227&lpg=PT227&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=HCr9TQHtAz&sig=ACfU3U1HPn1vkkZmeDNJ327SpJjFSqPveg&hl=en&sa=X&ved=2ahUKEwjiipyo5N6HAxUMDTQIHR2dHckQ6AF6BAghEAM
+url = https://books.google.com/books?id=GP7LEAAAQBAJ&pg=PT227&lpg=PT227&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=HCr9TQMtCr&sig=ACfU3U2v0U3ACpsbc1berBnX05TCIbQzJw&hl=en&sa=X&ved=2ahUKEwjesJj-9t6HAxV7l4kEHSSWKDYQ6AF6BAgkEAM
 
 [www.skyscanner.com.vn]
 match = -48.0%%
