--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -27,9 +27,9 @@ title = giương mn 1
 url = https://www.diepxuan.com/giuong-mn-1.html
 
 [giuonggaphoaphat.com]
-match = -81.8%%
-title = GIƯỜNG GẤP NHẬP KHẨU NHẬT BẢN
-url = http://giuonggaphoaphat.com/giuong-nhap-khau-nhat-ban
+match = -27.3%%
+title = Giuonggaphoaphat.com
+url = http://giuonggaphoaphat.com/
 
 [noithatdogodungduyen.com]
 match = -136.4%%
@@ -162,9 +162,9 @@ title = Country Inn & Suites by Radisson, Stillwater, MN
 url = https://vn.trip.com/hotels/stillwater-1-hotel-detail-2885985/comfort-inn-and-suites-stillwater/
 
 [tunhuamiennam.com]
-match = -245.5%%
-title = giường liền tủ nhựa cứng ecoplast cao cấp gec30
-url = https://tunhuamiennam.com/san-pham/giuong-lien-tu-nhua-cung-ecoplast-cao-cap-gec30/
+match = -9.1%%
+title = Giường Nhựa đài Loan
+url = https://tunhuamiennam.com/san-pham/giuong-nhua-dai-loan-gn16gd/
 
 [www.tripadvisor.com]
 match = -172.7%%
