--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-06 05:17:51
+lastsearch = 2024-08-06 05:57:11
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -575,4 +575,39 @@ url = https://coloradosun.com/2024/07/08/colorado-hoa-foreclosure-new-laws/
 match = -5.9%%
 title = Orlando Police Department
 url = https://www.orlando.gov/Our-Government/Departments-Offices/Orlando-Police-Department
+
+[kenh14.vn]
+match = -158.8%%
+title = Thang Duy gây choáng với hình ảnh xấu nhất sự nghiệp ...
+url = https://kenh14.vn/nu-hoang-18-cua-man-anh-hoa-ngu-gay-choang-voi-hinh-anh-xau-nhat-su-nghiep-truong-ve-kien-gia-gai-con-dep-hon-20240422083810032.chn
+
+[mobilecity.vn]
+match = -82.4%%
+title = Top 100+ hình nền hoa mẫu đơn đẹp nhất 2024
+url = https://mobilecity.vn/tin-tuc/top-hinh-nen-hoa-mau-don-dep-nhat.html
+
+[mytour.vn]
+match = -176.5%%
+title = Top 18 Loài hoa mang lại may mắn và tài lộc cho gia chủ ...
+url = https://mytour.vn/vi/blog/bai-viet/top-18-loai-hoa-mang-lai-may-man-va-tai-loc-cho-gia-chu-trong-nam-moi.html
+
+[www.yaman.vn]
+match = -55.6%%
+title = YA-MAN VN
+url = https://www.yaman.vn/
+
+[dienmaycholon.com]
+match = -182.4%%
+title = Cắt tóc ngày nào tốt? Ngày cắt tóc nhiều tài lộc, may mắn
+url = https://dienmaycholon.com/kinh-nghiem-mua-sam/cat-toc-ngay-nao-tot-ngay-cat-toc-nhieu-tai-loc-may-man
+
+[www.bachhoaxanh.com]
+match = -205.9%%
+title = Tổng hợp 18 loại hoa cát tường, thu hút tài lộc trong năm mới
+url = https://www.bachhoaxanh.com/kinh-nghiem-hay/tong-hop-18-loai-hoa-cat-tuong-thu-hut-tai-loc-nen-bay-trong-nha-dip-nam-moi-de-may-man-1318583
+
+[www.facebook.com]
+match = -41.2%%
+title = Thế Giới Hoa Đẹp | Ho Chi Minh City
+url = https://www.facebook.com/The.Gioi.Hoa.Dep.SalePage/
 
