--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-06 00:13:06
+lastsearch = 2024-08-06 05:50:35
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,8 +17,8 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = -300.0%%
-title = TUI Group – The one of the world's leading tourism groups
+match = -316.7%%
+title = The one of the world's leading tourism groups - TUI Group
 url = https://www.tuigroup.com/en-en
 
 [www.tui.nl]
@@ -107,9 +107,9 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -41.7%%
-title = Find & Book Flights
-url = https://www.tui.co.uk/flight/
+match = -250.0%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / ...
+url = https://www.tui.co.uk/
 
 [maritime-executive.com]
 match = -316.7%%
@@ -417,9 +417,9 @@ title = TUI Infotech - Juniper
 url = https://ejuniper.com/en/clients/tui-infotech/
 
 [www.tuimusement.com]
-match = -241.7%%
-title = Things to do in South Korea: Attractions and Tours
-url = https://www.tuimusement.com/uk/south-korea/c_90/
+match = -258.3%%
+title = Mount Vesuvius Crater Tour with Lunch at a Vineyard
+url = https://www.tuimusement.com/us/italy/sorrento/mount-vesuvius-crater-tour-with-lunch-at-a-vineyard-16/e_543nx-d_539-c_82/
 
 [ee.linkedin.com]
 match = -200.0%%
