--- a/images/tui-warmdream-160x200x09/config.ini
+++ b/images/tui-warmdream-160x200x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-160x200x09.html
 lastopen = 2024-06-17 10:41:37
 
 [search]
-lastsearch = 2024-08-06 01:50:47
+lastsearch = 2024-08-06 05:53:43
 
 [www.diepxuan.com]
 match = 10.5%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOooMM8eFP9mUjwA-p-AwPRQp5xOko6t812SWeje7_VXfYjMGMtog
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [community.goodsam.com]
 match = -62.5%%
