--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-05 10:38:15
+lastsearch = 2024-08-06 05:44:20
 
 [chanrathanhthuy.com]
-match = 9.7%%
-title = Tổng hợp những bộ chăn ga gối đệm đẹp nhất
-url = https://chanrathanhthuy.com/hoat-dong-cong-ty/tong-hop-nhung-bo-chan-ga-goi-dem-dep-nhat-1484.html
+match = -3.2%%
+title = Bí quyết chọn màu sắc chăn ga gối đệm hợp phong thủy
+url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-1400.html
 
 [demxanh.com]
-match = 58.1%%
-title = Bộ chăn ga gối Hanvico LIVING - LV18
-url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html
+match = 38.7%%
+title = Chăn ga gối Singapore lụa 5 món L5M18
+url = https://demxanh.com/chan-ga-goi-singapore-lua-5-mon-l5m18.html
 
 [songhongonline.vn]
 match = 50.0%%
-title = Bộ chăn ga gối SH_UC24 106
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc24-106
+title = Bộ chăn ga gối SH_UT23 032
+url = https://songhongonline.vn/products/nhan-ban-tu-bo-chan-ga-goi-sh-ut23-027
 
 [changagoidemsonghong.com]
 match = -29.0%%
