--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-08-06 03:46:53
+lastsearch = 2024-08-06 05:53:22
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -22,9 +22,9 @@ title = THỦ TỤC LÀM HỘ CHIẾU ĐÀI LOAN VÀ VISA NHẬP CẢN...
 url = https://roc-taiwan.org/vnsgn_en/post/79.html
 
 [shopee.vn]
-match = -57.1%%
-title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
-url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
+match = -42.9%%
+title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
+url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
 
 [www.taiwanembassy.org]
 match = -109.5%%
@@ -82,9 +82,9 @@ title = Trọn bộ hồ sơ, thủ tục xin visa Đài Loan mới nhất - VIS
 url = https://visana.vn/visa-dai-loan/
 
 [www.tiktok.com]
-match = -19.0%%
-title = Cách Xem Lịch Chiếu Film Tại Taiwan
-url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
+match = -104.8%%
+title = Phim MAI 14/2 chiếu tại Đài Loan m.n có Địa Chỉ Rạp chưa ...
+url = https://www.tiktok.com/@anhvuphunxamtaiwan/video/7349143704650681606?lang=en
 
 [www.travel.taipei]
 match = 19.0%%
