--- a/images/chieu-nhua-thai-binh-gt-180x300/config.ini
+++ b/images/chieu-nhua-thai-binh-gt-180x300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x300.html
 lastopen = 2024-08-01 10:35:37
 
 [search]
-lastsearch = 2024-08-06 01:41:50
+lastsearch = 2024-08-06 05:56:29
 
 [www.diepxuan.com]
 match = 38.7%%
@@ -12,9 +12,9 @@ title = Chiếu gấp Thái Bình 180x300 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html
 
 [shopee.vn]
-match = 32.3%%
-title = Chiếu Nhựa Gấp Gọn Đủ Kích Cỡ Cao Cấp
-url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-Hàng-Việt-Nam-Chiếu-Nhựa-Gấp-Gọn-Đủ-Kích-Cỡ-Cao-Cấp-i.398388048.13666402755
+match = 19.4%%
+title = Chăn Chiếu Thái Bình, Cửa hàng trực tuyến
+url = https://shopee.vn/phuong97tb
 
 [m.facebook.com]
 match = 19.4%%
@@ -39,7 +39,7 @@ url = https://sxd.bacgiang.gov.vn/documents/21455/5519781/1550589716143_Cong bo 
 [tiki.vn]
 match = 48.4%%
 title = Mua chiếu nhựa thái bình bền đẹp đủ cỡ
-url = https://tiki.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-p160055664.html?spid=160055719
+url = https://tiki.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-p169034812.html
 
 [pdfcoffee.com]
 match = 9.7%%
@@ -72,9 +72,9 @@ title = Chiếu Nhựa Thái Bình | Thanh Hóa
 url = https://www.facebook.com/chieunhuathaibinh/
 
 [shopadf.com]
-match = -51.6%%
-title = Những mẫu máy chiếu dưới 10 triệu đồng đáng mua mùa bóng ...
-url = http://shopadf.com/nhung-mau-may-chieu-duoi-10-trieu-dong-dang-mua-mua-bong-world-cup-133706.html
+match = -54.8%%
+title = Bên trong nơi diễn ra sự kiện ra mắt iPhone 8 - Xu Vàng 777
+url = http://shopadf.com/ben-trong-noi-dien-ra-su-kien-ra-mat-iphone-8-67152.html
 
 [www.tles.tyc.edu.tw]
 match = -22.7%%
