--- a/images/chieu-truc-den-khong-vien-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-18.html
 lastopen = 2024-06-07 00:19:24
 
 [search]
-lastsearch = 2024-08-06 04:22:53
+lastsearch = 2024-08-06 05:58:15
 
 [chieutrelanlan.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
 url = https://demxanh.com/chieu-truc-den.html
 
 [shopee.vn]
-match = -10.7%%
-title = Chiếu trúc - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/trúc
+match = -25.0%%
+title = Chiếu trúc 1m6 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/trúc/1m6
 
 [tongkhonem.com]
 match = 57.7%%
@@ -42,9 +42,9 @@ title = Chiếu trúc hạt đen có viền
 url = https://tongkhonem.com/san-pham/chieu-truc-hat-den-co-vien/
 
 [www.sendo.vn]
-match = -10.7%%
-title = Chiếu trúc đen không viền hàng việt nam cao cấp 1m2x2m ...
-url = https://www.sendo.vn/chieu-truc-den-khong-vien-hang-viet-nam-cao-cap-1m2x2m-duo-c-kie-m-ha-ng-31921335-117250615.html
+match = 7.1%%
+title = Chiếu trúc hạt đen cao cấp không viền 1m8x2m [Được ...
+url = https://www.sendo.vn/chieu-truc-hat-den-cao-cap-khong-vien-1m8x2m-duo-c-kie-m-ha-ng-19203105-117572088.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1722729600324_undefined_-1_cateLvl2_0_96_23_-1
 
 [chanrathanhthuy.com]
 match = -3.6%%
@@ -97,8 +97,8 @@ title = Chiếu trúc 1,6*2m hạt nâu không viền
 url = https://h5.lazada.vn/products/chieu-truc-162m-hat-nau-khong-vien-i473062569.html
 
 [chieutrucchieutre.ete.vn]
-match = 32.1%%
-title = Chiếu Trúc 1m8 hạt nâu bóng, không viền vải
+match = -10.7%%
+title = Chiếu Trúc 1m8 hạt nâu bóng, không viền vải: Sự Lựa ...
 url = https://chieutrucchieutre.ete.vn/2024/04/chieu-truc-hat-1m8-hat-nau-bong-khong.html
 
 [khonemthangloi.com]
