--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-06 05:13:42
+lastsearch = 2024-08-06 05:44:41
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -297,9 +297,9 @@ title = The Reinstatement of Covenants, Conditions, and ...
 url = https://www.floridabar.org/the-florida-bar-journal/the-reinstatement-of-covenants-conditions-and-restrictions-extinguished-by-the-marketable-record-title-act/
 
 [books.google.com]
-match = -217.6%%
-title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
-url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+14&source=bl&ots=2ilnWDyX-G&sig=ACfU3U1RiyM1nCyR7Zf0NJgOxkoUVkrtxQ&hl=en&sa=X&ved=2ahUKEwi2wqrr796HAxUyhYkEHR6HKCQQ6AF6BAgbEAM
+match = -194.1%%
+title = Bradshaw's General Railway and Steam Navigation Guide for ...
+url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+14&source=bl&ots=rUQ6ExGF9-&sig=ACfU3U2BpqGfr77a0iY8-f76wFdirR095g&hl=en&sa=X&ved=2ahUKEwi85O7h9t6HAxUEkYkEHWXDJg0Q6AF6BAgpEAM
 
 [www.house.gov]
 match = 11.8%%
@@ -575,4 +575,14 @@ url = https://www.expedia.co.uk/Bich-Tri-Hotels.d3000735875.Travel-Guide-Hotels
 match = 0.0%%
 title = 
 url = https://rtrlaw.com/real-estate-law/what-are-the-changes-being-made-to-floridas-hoa-and-condo-laws-in-2024/
+
+[didongviet.vn]
+match = -147.1%%
+title = Tải ngay hình nền hoa đẹp cho iPhone chất lượng cao nhất
+url = https://didongviet.vn/dchannel/hinh-nen-hoa-dep-cho-iphone/
+
+[www.hud.gov]
+match = -205.9%%
+title = No Good Cause for Discrimination: Some Evictions Are Never ...
+url = https://www.hud.gov/sites/dfiles/FHEO/documents/Never Good Cause.pdf
 
