--- a/images/nem-lo-xo-techwood-16/config.ini
+++ b/images/nem-lo-xo-techwood-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-16.html
 lastopen = 2024-06-10 01:29:52
 
 [search]
-lastsearch = 2024-08-06 01:52:18
+lastsearch = 2024-08-06 05:43:59
 
 [sieuthidemonline.vn]
 match = -19.0%%
@@ -22,14 +22,14 @@ title = Đệm lò xo Techwood - thương hiệu Tuấn Anh hàng đầu.
 url = https://chuyenhangviet.com/dem-lo-xo-techwood/
 
 [demxanh.com]
-match = -23.8%%
-title = Đại lý bán đệm lò xo Tuấn Anh Bắc Giang
-url = https://demxanh.com/da-i-ly-ba-n-dem-lo-xo-tua-n-anh-bac-giang.html
+match = -81.0%%
+title = [Cập nhật] Bảng giá đệm lò xo Tuấn Anh mới nhất 2020
+url = https://demxanh.com/cap-nhat-bang-gia-dem-lo-xo-tuan-anh-moi-nhat-2020.html
 
 [www.diepxuan.com]
 match = 4.8%%
 title = Nệm lò xo TechWood 160x200x23 - Điệp Xuân
-url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html?srsltid=AfmBOoql5KmE72G80w2IzeNGwQW7PAJ4FWDpxFbRHSLTYuj6vGy5uCU_
+url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html
 
 [shopee.vn]
 match = -61.9%%
