--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-06 03:37:48
+lastsearch = 2024-08-06 06:01:25
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,14 +22,14 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -45.5%%
-title = Kristi Noem
-url = https://en.wikipedia.org/wiki/Kristi_Noem
+match = -33.3%%
+title = Nam Joo-hyuk
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
-match = -160.0%%
-title = CDT Jake Sorrels successfully defended his senior thesis “ ...
-url = https://www.facebook.com/photo.php?fbid=2759708960745737&id=130999010283425&set=a.135510956498897&locale=hu_HU
+match = -165.0%%
+title = Majors Kate and Denis Alfin help keep West Point - The U.S. ...
+url = https://www.facebook.com/photo.php?fbid=2787775811272385&id=130999010283425&set=a.598254856891169&locale=hu_HU
 
 [www.vietnam.vn]
 match = -155.0%%
@@ -192,9 +192,9 @@ title = 12 Days in Seoul - by LA Seoulite - Everything about Korea
 url = https://laseoulite.substack.com/p/12-days-in-seoul
 
 [www.tiktok.com]
-match = -60.0%%
-title = Let's try sour mango from @Fruit Riot ...
-url = https://www.tiktok.com/@snickolas/video/7393700044731387178
+match = -70.0%%
+title = jg diff (F 12:39pm)#leagueoflegends ...
+url = https://www.tiktok.com/@ttv_jmarh/video/7247922325385956614
 
 [www.imdb.com]
 match = 0.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -90.0%%
-title = NORTH KOREA NEWSLETTER NO. 244 (January 10, 2013)
-url = https://en.yna.co.kr/view/AEN20130109006800325
+match = -155.0%%
+title = Heads of S. Korea's top-10 biz groups received 540.5 bln ...
+url = https://en.yna.co.kr/view/AEN20180218002800320
 
 [www.vlr.gg]
 match = -145.0%%
