--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-06 05:20:01
+lastsearch = 2024-08-06 05:55:26
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -37,9 +37,9 @@ title = Korea vs. Kína döntője lesz az MSI-nek!
 url = https://esport1.hu/news/2018/05/20/esport-aioween-leagueoflegends-riot-games-msi-mid-season-invitational-donto-kingzone-vs-rng
 
 [cryptoslate.com]
-match = 5.0%%
-title = Cryptocurrency Rankings
-url = https://cryptoslate.com/coins/
+match = 20.0%%
+title = Recently Added Coins
+url = https://cryptoslate.com/recently-added-coins/
 
 [30rates.com]
 match = -125.0%%
@@ -414,7 +414,7 @@ url = https://8tharmy.korea.army.mil/ksc/
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=ac57164e41e9010e&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwi59uSyyc6HAxVfE0QIHYQfBy0QsZYEegQITBAC
+url = https://www.google.com/search?sca_esv=0a6ab453dca08831&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjb86aV-d6HAxXWhIkEHdBcFeAQsZYEegQIUBAC
 
 [www.outlookindia.com]
 match = -170.0%%
