--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-08-06 02:27:55
+lastsearch = 2024-08-06 06:00:24
 
 [www.diepxuan.com]
 match = 50.0%%
@@ -12,14 +12,14 @@ title = Điệp Xuân Thảm giường nỉ 180x200
 url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
-match = -4.5%%
-title = Thảm trải giường cao su non màu hồng
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
+match = 18.2%%
+title = Thảm trải giường lông cừu TLC 02
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-02.html
 
 [www.lazada.vn]
-match = -68.2%%
-title = Ga chống thấm trải giường cotton 2 lớp loại tốt ...
-url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
+match = -50.0%%
+title = Tấm Bọc Nệm Chống Thấm Nước Ga Trải Vừa ...
+url = https://www.lazada.vn/products/tam-boc-nem-chong-tham-nuoc-ga-trai-vua-van-co-gian-tam-lot-thoang-khi-ga-trai-giuong-doi-2-nguoi-tren-giuong-90x200-180x200-i1765531904.html
 
 [noithatlongthai.com]
 match = -13.6%%
@@ -38,8 +38,8 @@ url = https://noithatthuynguyet.com/giuong-mdf-1-8x2m-co-2-ngan-keo/
 
 [tiki.vn]
 match = -36.4%%
-title = Thảm trải giường hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=thảm trải giường
+title = Tham trải giường hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=tham trải giường
 
 [gusofa.vn]
 match = -81.8%%
