--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-06 05:15:47
+lastsearch = 2024-08-06 05:59:42
 
 [ninhouse.vn]
 match = -146.2%%
@@ -82,9 +82,9 @@ title = Vietnamese-English dictionary - translation
 url = https://en.bab.la/dictionary/vietnamese-english/
 
 [shopee.vn]
-match = -115.4%%
-title = Áo gối nằm (đôi) mẫu đẹp- Được chọn mẫu
-url = https://shopee.vn/Áo-gối-nằm-(đôi)-mẫu-đẹp-Được-chọn-mẫu-i.18452594.20233541354
+match = -153.8%%
+title = vỏ gối kê cổ giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-chan-ga-goi-poly-cottong-ke-ban-co-1m2x2m-them-vo-goi-om/5956463448930783855/2642071820174507179/ 
 
 [songhong.info]
 match = -161.5%%
@@ -92,9 +92,9 @@ title = Vỏ gối ôm Sông Hồng 38x100cm vải 100%% cotton
 url = https://songhong.info/vo-goi-om-song-hong-38x100-cotton
 
 [www.lazada.vn]
-match = -38.5%%
-title = Vỏ Gối Kẻ Tím Giá Tốt T04/2024
-url = https://www.lazada.vn/tag/vo-goi-ke-tim/
+match = -53.8%%
+title = Vỏ Gối Kẻ Caro Giá Tốt T05/2024
+url = https://www.lazada.vn/tag/vo-goi-ke-caro/
 
 [flexhouse.vn]
 match = -207.7%%
