--- a/images/bo-bon-mua-warmdream-phi-lua/config.ini
+++ b/images/bo-bon-mua-warmdream-phi-lua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-warmdream-phi-lua.html
 lastopen = 2024-06-10 00:09:36
 
 [search]
-lastsearch = 2024-08-06 05:46:44
+lastsearch = 2024-08-06 06:28:59
 
 [diepxuan.com]
 match = 14.3%%
@@ -22,9 +22,9 @@ title = 2024 169: Spy Kids 3-D: Game Over (with Gaden Sousa)
 url = https://mtiz.ir/redirect/redirect.php?url=https://xn--d1aby4ah.xn--p1ai/9758623zfe43y
 
 [www.youtube.com]
-match = 0.0%%
-title = A. Bova, Luna rossa, for tenor recorder
-url = https://www.youtube.com/watch?v=kS8VwpTx9NA
+match = -39.3%%
+title = Thor: Love & Thunder Theme by Michael Giacchino ...
+url = https://www.youtube.com/watch?v=Fz7VIj98ikQ
 
 [www.tles.tyc.edu.tw]
 match = 0.0%%
@@ -45,4 +45,9 @@ url = https://www.tiktok.com/@giftbozekana1/video/7159257177650154757
 match = -60.7%%
 title = Bo | Jammin one of the greatest… on my way to eat at ...
 url = https://www.instagram.com/bo_wayne/reel/CvC3nQkO7PB/?next=/pn.tanjungkarang/
+
+[open.spotify.com]
+match = -57.1%%
+title = Bo Mambo - song and lyrics by Yma Sumac, Billy May, The ...
+url = https://open.spotify.com/track/30EcCD7n6o5IqaBN5LSzaG
 
