--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-08-05 22:24:32
+lastsearch = 2024-08-06 06:26:19
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -17,9 +17,9 @@ title = Bộ Ga Bọc Cotton Thêu Chân Màu Nâu Đất (12)
 url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat
 
 [shopee.vn]
-match = -21.4%%
-title = chăn ga gối - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
-url = https://shopee.vn/list/chăn ga gối
+match = -7.1%%
+title = ❤️Bộ chăn ga gối❤️ cotton poly mẫu Thỏ Hồng Hello ...
+url = https://shopee.vn/❤️Bộ-chăn-ga-gối❤️-cotton-poly-mẫu-Thỏ-Hồng-Hello-miễn-phí-bo-chun-drap-giường-ga-trải-giường-i.390896882.19894790651
 
 [foreverbedding.net]
 match = -7.1%%
@@ -27,9 +27,9 @@ title = Top 10+ Bộ Chăn Ga Gối Đệm Màu Đỏ Hot Nhất Hiện Nay
 url = https://foreverbedding.net/mau-chan-ga-goi-dem-mau-do
 
 [changagoidemsonghong.com]
-match = 35.7%%
-title = Bộ chăn ga gối cao cấp mã UC22-018
-url = https://changagoidemsonghong.com/chan-ga-goi-uc018
+match = -28.6%%
+title = Bộ chăn ga gối Elegance mã E18-10 chính hãng Sông Hồng
+url = https://changagoidemsonghong.com/chan-ga-goi-elegance-ma-e18-10
 
 [flexhouse.vn]
 match = -17.9%%
