--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-06 02:14:30
+lastsearch = 2024-08-06 06:15:57
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -102,9 +102,9 @@ title = mibetel hct 40mg|Casino Online Châu Á: Đánh Thức Mọi ...
 url = https://tuyensinh.epu.edu.vn/xiazai/mibetel-hct-40mg.phtm
 
 [chuthapdotphcm.org.vn]
-match = -156.2%%
-title = Hội Chữ thập đỏ Thành phố Hồ Chí Minh | Trang chủ
-url = https://chuthapdotphcm.org.vn/
+match = -187.5%%
+title = Lớp Sơ cấp cứu cơ bản Khóa 13, ngày 03/8/2024 (thứ bảy)
+url = https://chuthapdotphcm.org.vn/tin-tuc/thong-bao-chieu-sinh-lop-so-cap-cuu
 
 [bandantoc.soctrang.gov.vn]
 match = -218.8%%
@@ -207,9 +207,9 @@ title = Mổ u tuyến giáp có bị tái phát không? Các yếu tố ảnh h
 url = https://tamanhhospital.vn/mo-u-tuyen-giap-co-bi-tai-phat-khong/
 
 [dangcongsan.vn]
-match = -218.8%%
-title = Hơn 3.000 vận động viên tham gia giải chạy “Quang Binh ...
-url = https://dangcongsan.vn/the-thao/hon-3000-van-dong-vien-tham-gia-giai-chay-quang-binh-international-marathon-2024-673634.html
+match = -37.5%%
+title = BẢN TIN THỜI SỰ NGÀY 3/8/2024
+url = https://dangcongsan.vn/video
 
 [soctrang.gov.vn]
 match = -218.8%%
