--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-08-06 05:12:20
+lastsearch = 2024-08-06 06:26:57
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -22,9 +22,9 @@ title = Nệm lò xo Kingkoil Cloud Firm
 url = https://nemragoi.com/nem-lo-xo-kingkoil-cloud-firm.html
 
 [everonkorea.com]
-match = 31.8%%
-title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm
-url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
+match = 23.4%%
+title = Đệm lò xo Kingkoil Cloud Firm cao 27cm - Everon Korea
+url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-firm/
 
 [everon.com.vn]
 match = 23.4%%
@@ -52,9 +52,9 @@ title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27 - Điệp Xuân
 url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
 
 [everon.online]
-match = 25.5%%
-title = Bảng Giá Đệm Lò Xo Everon, Đệm Lò Xo Mỹ King Koil ...
-url = https://everon.online/collections/dem-lo-xo-everon
+match = 31.9%%
+title = Đệm Lò Xo King Koil - Bảng Giá Các Sản Phẩm ...
+url = https://everon.online/collections/dem-lo-xo-king-koil
 
 [everonvn.com.vn]
 match = 19.1%%
