--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-08-06 05:12:39
+lastsearch = 2024-08-06 06:17:42
 
 [www.everonvn.vn]
-match = 69.2%%
-title = Đệm lò xo Everon Pocket Premium
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-pocket-premium.html
+match = -61.5%%
+title = Đệm Everon Chính Hãng, Khuyến mại giảm giá đặc biệt
+url = https://www.everonvn.vn/san-pham/dem-everon.html
 
 [www.diepxuan.com]
 match = 61.5%%
@@ -27,9 +27,9 @@ title = Đệm Lò Xo Everon Pocket Pops
 url = https://demchinhhang.com/products/dem-lo-xo-tui-everon-pocket-pops
 
 [nemhana.com]
-match = -53.8%%
-title = Khám phá bí quyết tái tạo mỗi ngày cùng nệm Everon
-url = https://nemhana.com/nem-everon/
+match = 30.8%%
+title = Nệm lò xo Everon Pocket Premium - Nệm Hana
+url = https://nemhana.com/nem-lo-xo-everon-pocket-premium/
 
 [go2joyvn.myharavan.com]
 match = 26.9%%
