--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-06 01:53:02
+lastsearch = 2024-08-06 06:23:52
 
 [en.wikipedia.org]
-match = 0.0%%
-title = March First Movement
-url = https://en.wikipedia.org/wiki/March_First_Movement
+match = -31.2%%
+title = Gwangju Uprising
+url = https://en.wikipedia.org/wiki/Gwangju_Uprising
 
 [www.britannica.com]
 match = 0.0%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/1/19/north-korea-touts-underwater-nucl
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=7b6da075e491d3ae&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwiW5o_CqN2HAxVImYkEHSNhKQsQsZYEegQIMRAC
+url = https://www.google.com/search?sca_esv=0a6ab453dca08831&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjT29nC_96HAxWuLtAFHXVgGn0QsZYEegQIVhAC
 
 [produccionesitaca.es]
 match = -21.4%%
@@ -442,9 +442,9 @@ title = Tom's Guide | Tech Product Reviews, Top Picks and How To
 url = https://www.tomsguide.com/
 
 [www.nasdaq.com]
-match = -100.0%%
-title = Global Equity Markets Plunge on Risk-Off Sentiment in ...
-url = https://www.nasdaq.com/articles/global-equity-markets-plunge-risk-sentiment-asset-markets
+match = -43.5%%
+title = Stocks Slump on US Economic Growth Risks
+url = https://www.nasdaq.com/articles/stocks-slump-us-economic-growth-risks
 
 [www.barchart.com]
 match = -43.5%%
