--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-08-06 04:27:07
+lastsearch = 2024-08-06 06:18:19
 
 [thamaulac.com.vn]
-match = -22.2%%
-title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
-url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
+match = -88.9%%
+title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
+url = https://thamaulac.com.vn/
 
 [xoptraisan.info]
 match = -138.9%%
@@ -22,19 +22,19 @@ title = Thảm xốp một màu 60cm x 60 cm
 url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
 
 [trieuchau.com]
-match = -61.1%%
-title = Thảm Trải Sàn TPHCM - THẢM XỐP MÀU 60X60X1.2CM
-url = http://trieuchau.com/en-us/1057/27906/Tham-xop-60x60cm/THAM-XOP-MAU-60X60X12CM
+match = -5.6%%
+title = Thảm Xốp Trải Sàn Một Màu 60x60 cm
+url = https://trieuchau.com/vi-vn/1057/27906/Tham-Xop-60x60cm/Tham-Xop-Trai-San-Mot-Mau-60x60-cm
 
 [shopee.vn]
-match = -111.1%%
-title = thảm ghép 60x60cm giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
+match = -100.0%%
+title = Thảm Xốp Ghép Sàn, Thảm Nỉ Ghép Sàn Tường Lâm 60*60
+url = https://shopee.vn/Thảm-Xốp-Ghép-Sàn-Thảm-Nỉ-Ghép-Sàn-Tường-Lâm-60*60-Hàng-Việt-Nam-10-Tâm-Bịch-i.167631306.14814457758
 
 [vatlieulotsan.com]
-match = -27.8%%
-title = Thảm Xốp 60 × 60 Cm Một Màu Vân Caro
-url = https://vatlieulotsan.com/tham-xop-60-x-60-cm-mot-mau-van-caro/
+match = -83.3%%
+title = Thảm Xốp Mặt Nỉ - Kho Vật Liệu Trải Sàn TPHCM
+url = https://vatlieulotsan.com/danh-muc-san-pham/tham-xop/tham-xop-mat-ni/
 
 [thamtuonglam.vn]
 match = 21.4%%
