CI images update

--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-08-06 03:29:05
+lastsearch = 2024-08-06 06:35:10
 
 [shopee.vn]
-match = 21.4%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = 14.3%%
+title = Chiếu Điều Hòa Lụa Tơ Tằm Nhập Khẩu Cao Cấp ...
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Tơ-Tằm-Nhập-Khẩu-Cao-Cấp-Chiếu-Có-Lót-Thông-Hơi-Mát-Lạnh-Mùa-Hè-i.294575973.17493425546
 
 [chieutrelanlan.com]
 match = 19.0%%
@@ -17,14 +17,14 @@ title = Chiếu Mây Điều Hòa 3D
 url = https://chieutrelanlan.com/chieu-may-dieu-hoa-3-D-p18.html
 
 [goni.vn]
-match = -21.4%%
-title = Chiếu điều hòa là gì? Có nên sử dụng chiếu điều hòa không
-url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
+match = 21.4%%
+title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
+url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [demxanh.com]
-match = 42.9%%
-title = Chiếu điều hòa mây viền lụa loại đẹp
-url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
+match = 3.6%%
+title = Chiếu điều hòa cao su non đa sắc xanh cốm hình hoa
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xanh-com-hinh-hoa.html
 
 [tiki.vn]
 match = 10.7%%
