--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-06 02:48:42
+lastsearch = 2024-08-06 06:43:35
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = -72.7%%
-title = Kristi Noem
-url = https://en.wikipedia.org/wiki/Kristi_Noem
+match = -58.3%%
+title = Nam Joo-hyuk
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
 match = -108.7%%
@@ -92,9 +92,9 @@ title = Ministry of Defence acronyms and abbreviations
 url = https://assets.publishing.service.gov.uk/media/5a7ebee940f0b6230268b464/20140808_MOD_Acronyms_and_Abbreviations.pdf
 
 [esport1.hu]
-match = -100.0%%
-title = Koreában akár rács mögé is kerülhetnek majd a boosterek
-url = https://esport1.hu/news/2017/06/15/esport-heldeus-korea-torveny-le-a-boosterekkel
+match = -73.9%%
+title = MSI 2024: Minden, amit tudni érdemes a közelgő ...
+url = https://esport1.hu/news/2024/04/6/riot-games-league-of-legends-itt-van-minden-amit-eddig-az-msi-reszleteirol-es-resztvevoirol-tudunk-inora
 
 [www.cnbc.com]
 match = -108.7%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -117.4%%
-title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
-url = https://en.yna.co.kr/view/AEN20170907001852315
+match = -82.6%%
+title = 122 ships affected by suspected N. Korean GPS jamming
+url = https://en.yna.co.kr/view/AEN20120504005000315
 
 [www.usmcu.edu]
 match = -104.3%%
