--- a/images/bo-chan-ga-goi-uc-solid-18/config.ini
+++ b/images/bo-chan-ga-goi-uc-solid-18/config.ini
@@ -22,9 +22,9 @@ title = Bộ chăn ga gối sông hồng urban SH_UC23 026 - Giá tốt nhất
 url = https://dongahome.vn/chan-ga-goi-song-hong-sh_uc23-026
 
 [demhong.vn]
-match = 0.0%%
-title = Chăn ga gối Sông Hồng Urban mã mầu UC11
-url = https://demhong.vn/chan-ga-goi-song-hong-uc11/
+match = -42.3%%
+title = Chăn ga gối Sông Hồng không chần 100%% cotton Solid
+url = https://demhong.vn/chan-ga-goi-song-hong-don-sac-khong-chan/
 
 [chandem.com.vn]
 match = 34.6%%
