--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-08-06 04:46:36
+lastsearch = 2024-08-06 06:36:54
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Chăn ga gối đệm happy
 url = https://www.facebook.com/Changaxuattaikho/
 
 [shopee.vn]
-match = -32.1%%
-title = Bộ chăn ga gối, ga giường, vỏ chăn, vỏ gối drap nệm ga ...
-url = https://shopee.vn/Bộ-chăn-ga-gối-ga-giường-vỏ-chăn-vỏ-gối-drap-nệm-ga-chun-ra-giường-chăn-ga-gối-đệm-Happy-Home-i.600110082.15146634205
+match = -46.4%%
+title = [SP mới] Bộ ga gối poly cotton ga kí túc xá kích thước ...
+url = https://shopee.vn/-SP-mới-Bộ-ga-gối-poly-cotton-ga-kí-túc-xá-kích-thước-80x190cm-drap-nệm-ga-giường-đơn-ga-chun-trải-giường-i.483546614.20369429874
 
 [chandem.com.vn]
 match = 17.9%%
@@ -37,14 +37,14 @@ title = Bảng giá chăn ga gối đệm mới nhất
 url = https://thegioinem.com/bang-gia-chan-ga-goi-dem.html
 
 [happynest.vn]
-match = 10.7%%
-title = Bộ ga chun chần bốn mùa Happy Town EPC23048
-url = https://happynest.vn/shop/EBGCTBMEPC23048/bo-ga-chun-chan-bon-mua-happy-town-epc23048.html
+match = 50.0%%
+title = Bộ Ga chun chần EPM21071
+url = https://happynest.vn/shop/EPM21071GC/bo-ga-chun-chan-epm21071.html
 
 [chuyenhangviet.com]
-match = -25.0%%
-title = Bộ chăn ga gối Sông Hồng vải cotton 100%%, mã C16 - 037
-url = https://chuyenhangviet.com/chan-ga-goi-song-hong-c16-c37/
+match = 3.6%%
+title = Bộ chăn ga gối Sông Hồng vải Tc mã C16 - T09
+url = https://chuyenhangviet.com/chan-ga-goi-song-hong-tc-c16-t09/
 
 [everonhanquoc.vn]
 match = 21.4%%
