--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-05 23:48:13
+lastsearch = 2024-08-06 06:39:18
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác em bé
 url = https://shopee.vn/Chiếu-lác-em-bé-i.298458938.4550748407
 
 [www.youtube.com]
-match = -200.0%%
-title = Gấm Lụa Cho Đời, Má Em Dặn Anh | Lofi Chữa Lành || Nhạc ...
-url = https://www.youtube.com/watch?v=x0H7MIQE4cM
+match = -187.5%%
+title = Gấm Lựa Cho Đời Remix ~ Tổng Hợp Nhạc Remix G5r 2024 ...
+url = https://www.youtube.com/watch?v=yFC_gf0mYnk
 
 [hawater.com.vn]
 match = -75.0%%
@@ -102,9 +102,9 @@ title = PG-1
 url = https://yamaha-motor.com.vn/xe/pg-1-bns1/
 
 [tuoitre.vn]
-match = -200.0%%
-title = Amee ra album sau 2 năm vắng bóng, chuyện giải cứu là ...
-url = https://tuoitre.vn/amee-ra-album-sau-2-nam-vang-bong-chuyen-giai-cuu-la-chieu-tro-20240803113915411.htm
+match = -193.8%%
+title = Video Land Rover Defender nâng gầm chèn qua dải phân ...
+url = https://tuoitre.vn/video-land-rover-defender-nang-gam-chen-qua-dai-phan-cach-khien-nguoi-xem-sung-20240802090420508.htm
 
 [www.apple.com]
 match = 0.0%%
