--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-08-05 20:23:12
+lastsearch = 2024-08-06 06:30:24
 
 [www.diepxuan.com]
-match = 10.0%%
-title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
+match = 15.0%%
+title = Chiếu nhựa Hà Nội 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html
 
 [shopee.vn]
-match = 70.0%%
-title = Chiếu nhựa Hà Nội các cỡ
-url = https://shopee.vn/Chiếu-nhựa-Hà-Nội-các-cỡ-i.236527859.6960486970
+match = -35.0%%
+title = chiếu nhựa giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu nhựa
 
 [tchome.vn]
 match = 20.0%%
