--- a/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thien-nhien-140x200x10-felix.html
 lastopen = 2024-06-07 00:21:32
 
 [search]
-lastsearch = 2024-08-06 04:25:43
+lastsearch = 2024-08-06 06:45:18
 
 [thefelix.vn]
 match = -50.0%%
@@ -17,9 +17,9 @@ title = Nệm cao su thiên nhiên Felix - Nệm Khang Anh
 url = https://nemkhanganh.com/san-pham/nem-cao-su-thien-nhien-felix/
 
 [www.facebook.com]
-match = -15.8%%
-title = CẢM GIÁC THƯ GIÃN MỖI... - Felix - Nệm cao su thiên nhiên
-url = https://www.facebook.com/story.php/?story_fbid=801049808852840&id=100068434838834
+match = 13.3%%
+title = Felix - Nệm cao su thiên nhiên
+url = https://www.facebook.com/thefelix.vn/posts/nệm-cao-cấp-giá-xưởngnệm-cao-su-thiên-nhiên-felix-hàng-việt-nam-chất-lượng-cao-n/722093250081830/
 
 [shopee.vn]
 match = 36.8%%
