--- a/images/ruot-goi-ke-hoa-45x65/config.ini
+++ b/images/ruot-goi-ke-hoa-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 lastopen = 2024-08-01 06:54:03
 
 [search]
-lastsearch = 2024-08-06 02:40:03
+lastsearch = 2024-08-06 06:45:58
 
 [www.everonvn.vn]
 match = 4.8%%
@@ -12,9 +12,9 @@ title = Ruột gối thư giãn cổ Micro Relax
 url = https://www.everonvn.vn/chi-tiet/ruot-goi-thu-gian-co-micro-relax.html
 
 [shopee.vn]
-match = -81.0%%
-title = Ruột gối osin bông cứng 45x65. Dành cho người thích ...
-url = https://shopee.vn/Ruột-gối-osin-bông-cứng-45x65.-Dành-cho-người-thích-nằm-gối-cứng-”3-i.435075614.3489785530
+match = -114.3%%
+title = Ruột Gối Đầu Bông Gòn trắng tinh, Kích thước tiêu chuẩn ...
+url = https://shopee.vn/Ruột-Gối-Đầu-Bông-Gòn-trắng-tinh-Kích-thước-tiêu-chuẩn-45x65-và-ruột-ôm-35*105-i.5009645.19422327424
 
 [www.diepxuan.com]
 match = 4.8%%
