--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -17,9 +17,9 @@ title = Thảm trải giường lông cừu TLC 06 - Hà Nội
 url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [www.lazada.vn]
-match = -50.0%%
-title = Tấm Bọc Nệm Chống Thấm Nước Ga Trải Vừa ...
-url = https://www.lazada.vn/products/tam-boc-nem-chong-tham-nuoc-ga-trai-vua-van-co-gian-tam-lot-thoang-khi-ga-trai-giuong-doi-2-nguoi-tren-giuong-90x200-180x200-i1765531904.html
+match = -68.2%%
+title = Ga chống thấm trải giường cotton 2 lớp loại tốt ...
+url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
 
 [noithatlongthai.com]
 match = -13.6%%
@@ -102,9 +102,9 @@ title = Eksternt link - Filskov Friskole
 url = https://filskovfriskole.skoleporten.dk/sp/298936/iframe?address=http://xn--e1aaa3bd0cza.xn--p1ai/95DwMiUfe43v
 
 [tonybed.com]
-match = -40.0%%
-title = Đầu giường
-url = https://tonybed.com/dau-giuong/
+match = -4.5%%
+title = Bộ Drap Ga Trải Giường Modal - 21
+url = https://tonybed.com/bo-drap-ga-trai-giuong-modal-21/
 
 [covacu.com]
 match = 28.6%%
