CI images update

--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-06 02:56:03
+lastsearch = 2024-08-06 06:47:24
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
 url = https://demxanh.com/chieu-truc-den.html
 
 [www.lazada.vn]
-match = -81.0%%
-title = Chiếu Trúc Thái Lan Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
+match = -119.0%%
+title = [SIZE LỚN 1.8x2m] Chiếu điều hoà sợi mây chiếu ngủ văn ...
+url = https://www.lazada.vn/products/size-lon-18x2m-chieu-dieu-hoa-soi-may-chieu-ngu-van-phong-chat-lieu-soi-may-tong-hop-thoang-mat-chieu-ngu-van-phong-i1758917727.html
 
 [tiki.vn]
 match = -42.9%%
@@ -632,9 +632,9 @@ title = XEM PHIM VUI NHẬN ƯU ĐÃI XỊN
 url = https://aeonmall-binhtan.com.vn/su-kien/xem-phim-vui-nhan-uu-dai-xin
 
 [www.vinmec.com]
-match = -100.0%%
-title = Tim thai có khi nào? Thời điểm siêu âm tim thai lần đầu
-url = https://www.vinmec.com/vie/bai-viet/tim-thai-co-khi-nao-thoi-diem-sieu-am-tim-thai-lan-dau-vi
+match = 0.0%%
+title = Sự phát triển của thai nhi tuần 4
+url = https://www.vinmec.com/vie/bai-viet/su-phat-trien-cua-thai-nhi-tuan-4-vi
 
 [www.hcmcpv.org.vn]
 match = -104.8%%
@@ -695,4 +695,9 @@ url = https://vietstock.vn/2024/08/tpbank-tu-la-co-dau-ve-ngan-hang-so-den-cong-
 match = -28.6%%
 title = 2024 Vật Dương Cứng Khio Cương Nào
 url = https://issmitliebe.de/4086954-dương-vật-cương-cứng-khio-nào.html
+
+[medlatec.vn]
+match = -71.4%%
+title = Siêu âm 4 chiều vào thời điểm nào thích hợp nhất?
+url = https://medlatec.vn/tin-tuc/sieu-am-4-chieu-vao-thoi-diem-nao-thich-hop-nhat-s28-n11043
 
