--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-08-06 04:20:44
+lastsearch = 2024-08-06 06:51:26
 
 [changagoidemsonghong.com]
-match = 37.0%%
-title = Chăn ga gối classic cotton mã C16-C38
-url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
+match = -55.6%%
+title = HOme Collection - dòng chăn ga gối cotton nhập khẩu hiệu ...
+url = https://changagoidemsonghong.com/home-collection
 
 [demhong.vn]
 match = 11.1%%
@@ -200,4 +200,9 @@ url = https://demvip.vn/products/bo-chan-ga-goi-cotton-lua-cao-cap-ltt16
 match = -25.9%%
 title = Bộ chăn ga gối đệm Cotton poly đáng yêu Mẫu 16 - Nắng Store
 url = https://nangstore.vn/bo-chan-ga-goi-de-m-cotton-poly-da-ng-yeu-ma-u-16
+
+[www.khodemthanhdo.com]
+match = 7.4%%
+title = Bộ chăn ga gối sông hồng cao cấp urban uc22 016
+url = https://www.khodemthanhdo.com/products/nhan-ban-tu-bo-chan-ga-goi-song-hong-cao-cap-urban-uc21-009
 
