--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-06 02:13:06
+lastsearch = 2024-08-06 06:46:04
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -27,9 +27,9 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -200.0%%
-title = Discovery of a novel third-generation EGFR inhibitor and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7218543/
+match = -194.1%%
+title = Non-alcoholic fatty liver disease and colorectal cancer ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6613648/
 
 [books.google.com]
 match = -11.8%%
@@ -42,9 +42,9 @@ title =
 url = https://www.ateezstoryline.com/ateez
 
 [www.youtube.com]
-match = -141.2%%
-title = ATEEZ(KQ Fellaz) (Yunho Solo) Performance Video
-url = https://www.youtube.com/watch?v=SOqaA-Mbw88
+match = -105.9%%
+title = XG - SHOOTING STAR (Official Music Video)
+url = https://www.youtube.com/watch?v=L7spCJxloLY
 
 [www.tiktok.com]
 match = 37.5%%
