--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-06 05:42:49
+lastsearch = 2024-08-06 06:51:47
 
 [www.diepxuan.com]
-match = 17.9%%
-title = Điệp Xuân Ga chun EPCARLESS 180x200
-url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html?srsltid=AfmBOoo7wGdVu2Rd6MZlslDB7gL-tUpuRKeE8Z8SJp2wU9LU7X79Oj1b
+match = 3.6%%
+title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [www.qcyc.ca]
 match = -53.6%%
@@ -27,9 +27,9 @@ title = 常識科
 url = https://www.sap.edu.hk/custompage/openiniframe.aspx?ct=custompage&webpageid=44&cpmid=176&rurl=https://xn--b1aecnalzhcpg.xn--p1ai/9825461fe43y
 
 [demxanh.com]
-match = 7.1%%
-title = Ga gối Sông Hồng basic TC BT24201
-url = https://demxanh.com/ga-goi-song-hong-basic-tc-bt24201.html?srsltid=AfmBOoqXJfqydahS08LKx5fBwCO7rNJm_4d0D3zUCGfC3MGFyQlWEZxM
+match = -3.6%%
+title = Ga gối Sông Hồng Basic cotton BC23082
+url = https://demxanh.com/ga-goi-song-hong-basic-cotton-bc23082.html
 
 [stevematuro.com]
 match = -39.3%%
