--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-06 06:28:17
+lastsearch = 2024-08-06 06:45:21
 
 [www.tiktok.com]
 match = -11.8%%
@@ -69,7 +69,7 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 [books.google.com]
 match = -158.8%%
 title = The Monthly Army List - Page 23 - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdnoc41mY&sig=ACfU3U1yzlhTPZHgol6ZQKqDyQOeUGRMgw&hl=en&sa=X&ved=2ahUKEwji_ZvBgN-HAxUR48kDHV8-M1MQ6AF6BAgZEAM
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdnoc52fS&sig=ACfU3U3xeUptP4BoGQTmq5yHxMjJSzsbnQ&hl=en&sa=X&ved=2ahUKEwieidaphN-HAxVmvokEHRLsBxcQ6AF6BAg5EAM
 
 [tax.vermont.gov]
 match = -29.4%%
