--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-06 03:15:07
+lastsearch = 2024-08-06 06:53:13
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = List of acupuncture points
 url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [books.google.com]
-match = -430.0%%
-title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgqPLuic&sig=ACfU3U2LX47_-6ap8G5_yZGvKHnqiSKQhQ&hl=en&sa=X&ved=2ahUKEwi26cSq1d6HAxViGlkFHfItLGMQ6AF6BAgXEAM
+match = -280.0%%
+title = The Letter to Ren An and Sima Qian’s Legacy
+url = https://books.google.com/books?id=eCnvCwAAQBAJ&pg=PA170&lpg=PA170&dq=man+ren+16&source=bl&ots=0fsjSUbz2b&sig=ACfU3U0CIDyrKCXLaxZ3KVJDy2wFfMDnpw&hl=en&sa=X&ved=2ahUKEwiOzdaKht-HAxUbCnkGHXQHHAEQ6AF6BAgmEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
@@ -325,4 +325,9 @@ url = https://dartmouthsports.com/awards.aspx?aow=4353
 match = -450.0%%
 title = Clarissa Ren - 2013-14 - Track and Field - American University
 url = https://aueagles.com/sports/track-and-field/roster/clarissa-ren/586
+
+[www.americandragon.com]
+match = 0.0%%
+title = 
+url = https://www.americandragon.com/Points/REN-16.html
 
