--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-08-06 00:26:00
+lastsearch = 2024-08-06 07:01:22
 
 [demtot.com]
-match = 26.7%%
-title = Đệm lò xo Korea
-url = https://demtot.com/dem-lo-xo-lien-ket-korea/
+match = 4.8%%
+title = Tag Archives: đệm lò xo
+url = https://demtot.com/tag/dem-lo-xo/
 
 [tuananh.vn]
 match = 52.4%%
@@ -22,9 +22,9 @@ title = [Freeship + Quà tặng] - Đệm lò xo Techwood Tuấn Anh rẻ ...
 url = https://shopee.vn/-Freeship-Quà-tặng-Đệm-lò-xo-Techwood-Tuấn-Anh-rẻ-nhất-thị-trường-i.74770078.6992817339
 
 [demxanh.com]
-match = -109.5%%
-title = Top 10 loại nệm lò xo liên kết chất lượng và bán chạy nhất!
-url = https://demxanh.com/top-10-loai-nem-lo-xo-lien-ket-chat-luong-va-ban-chay-nhat.html
+match = -33.3%%
+title = Đệm lò xo Tuấn Anh Techwood không bóc dày 23cm
+url = https://demxanh.com/dem-lo-xo-techwood-sale-off-50.html
 
 [maybedding.vn]
 match = 38.9%%
@@ -105,4 +105,9 @@ url = https://chandemsadora.com/chan-ga-goi-dem-cac-hang-khac/dem-lo-xo/4
 match = -66.7%%
 title = Bảng giá khuyến mại đệm lò xo Techwood chất lượng cao!
 url = https://demhong.vn/dem-lo-xo-techwood/
+
+[demthienkim.com]
+match = -66.7%%
+title = Bảng giá khuyến mại đệm lò xo Techwood chất lượng cao!
+url = https://demthienkim.com/dem-lo-xo-techwood/
 
