--- a/images/ruot-goi-ke-everon-45x65-thap/config.ini
+++ b/images/ruot-goi-ke-everon-45x65-thap/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thap.html
 lastopen = 2024-06-09 22:44:50
 
 [search]
-lastsearch = 2024-08-06 02:18:00
+lastsearch = 2024-08-06 07:01:00
 
 [www.everonvn.vn]
-match = 34.5%%
-title = Ruột gối thư giãn cổ Micro Relax
-url = https://www.everonvn.vn/chi-tiet/ruot-goi-thu-gian-co-micro-relax.html
+match = 56.5%%
+title = Ruột gối Everon 45 x 65
+url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-45-x-65.html
 
 [happynest.vn]
 match = 3.4%%
@@ -79,7 +79,7 @@ url = https://tongdailyeveron.com.vn/products/ruot-goi-thu-gian-co
 [www.diepxuan.com]
 match = 34.5%%
 title = Ruột gối kê Everon 45x65 thư giãn cổ - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html
+url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html?srsltid=AfmBOoruh3nqHY9QRdUnmYOqIcHp2LZpvpsARuDSgmJVVk2CWLMbOaqX
 
 [everonvn.com.vn]
 match = -20.7%%
