--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-08-06 03:49:15
+lastsearch = 2024-08-06 07:00:20
 
 [gobearcats.com]
 match = -142.1%%
@@ -137,9 +137,9 @@ title = Kathleen Fisch
 url = https://profiles.ucsd.edu/kathleen.fisch
 
 [som.cuanschutz.edu]
-match = -110.5%%
-title = Larry Allen, MD Professor, Medicine-Cardiology
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/13824
+match = -163.2%%
+title = Robin Shandas, PhD Professor, University of Colorado - Denver
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/17849
 
 [saveseattleschools.blogspot.com]
 match = -131.6%%
@@ -187,9 +187,9 @@ title = Workers' Compensation Appeals Board - Panel decisions
 url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [pubmed.ncbi.nlm.nih.gov]
-match = -136.8%%
-title = The 5th edition of the World Health Organization ...
-url = https://pubmed.ncbi.nlm.nih.gov/35732829/
+match = -205.3%%
+title = Identification of ten variants associated with risk of estrogen ...
+url = https://pubmed.ncbi.nlm.nih.gov/29058716/
 
 [www.sjsu.edu]
 match = -105.3%%
