--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-08-06 02:34:07
+lastsearch = 2024-08-06 08:07:59
 
 [silverwow.net]
 match = -255.6%%
@@ -357,9 +357,9 @@ title = 88 Chan Kong Thye Chilli Paste 3kg
 url = https://shopee.sg/88-Chan-Kong-Thye-Chilli-Paste-3kg-i.273437342.5954728914
 
 [www.aliexpress.com]
-match = -433.3%%
-title = Jeju Mini Pumpkin Chestnut Pumpkin (Bau-chan) 3kg 5kg ...
-url = https://www.aliexpress.com/item/1005007006636974.html?gps-id=platformRecommendH5ForSpider&pvid=681fc913-d106-42ba-a11f-c7a97a4289ed&_t=gps-id:platformRecommendH5ForSpider,pvid:681fc913-d106-42ba-a11f-c7a97a4289ed,tpp_buckets:668#2846#8111#1996&pdp_npi=4@dis!USD!23.03!23.03!!!32900!32900!@2103237317208540235563527e03b3!-1!rec!CA!!AB
+match = -455.6%%
+title = Jeju Nogi Mini Night Pumpkin (Bau-chan) 3kg 6 ~ 12 pieces
+url = https://www.aliexpress.com/item/1005007181928372.html
 
 [www.speedymetals.com]
 match = 0.0%%
