--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-08-06 00:38:58
+lastsearch = 2024-08-06 08:02:49
 
 [shopee.vn]
-match = -52.2%%
-title = Chiếu Trúc Tre Cao Bằng Xịn Các Cỡ 0.8m/0.9m/1m/1.2 ...
-url = https://shopee.vn/Chiếu-Trúc-Tre-Cao-Bằng-Xịn-Các-Cỡ-0.8m-0.9m-1m-1.2m-1.4m-1.5m-1.6m-1.8m-2m-i.182611643.17934077095
+match = -43.5%%
+title = Chiếu trúc Tây Bắc Cao Bằng loại đẹp (Mát Lạnh Mùa Hè)
+url = https://shopee.vn/Chiếu-trúc-Tây-Bắc-Cao-Bằng-loại-đẹp-(Mát-Lạnh-Mùa-Hè)-i.453113145.9960128744
 
 [www.diepxuan.com]
 match = 26.1%%
@@ -32,9 +32,9 @@ title = Xưởng chiếu cây cao bằng | By Cơ sở SX chiếu Tre Việt ...
 url = https://m.facebook.com/497069713692846/videos/1865016670231470/?__so__=watchlist&__rv__=video_home_www_playlist_video_list&locale=cs_CZ
 
 [chieutrucsaigon.com]
-match = -17.4%%
-title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
+match = 30.4%%
+title = ĐỊA CHỈ BÁN CHIẾU CAO BẰNG HCM
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/dia-chi-ban-chieu-cao-bang-hcm-37.html
 
 [demxanh.com]
 match = -21.7%%
@@ -97,9 +97,9 @@ title = Chiếu trúc sào Cao Bằng - Báo Công Thương
 url = https://congthuong.vn/chieu-truc-sao-cao-bang-121190.html
 
 [www.lazada.vn]
-match = -26.1%%
-title = Chiếu Trúc Cao Sơn Cao Bằng Loại 1 Giá Tốt T06/2024
-url = https://www.lazada.vn/tag/chiếu-trúc-cao-sơn-cao-bằng-loại-1?innerlink=related_v2
+match = -69.6%%
+title = Chiếu trúc cao bằng in hoa,Chiếu Trúc Tăm Tây Bắc Mát ...
+url = https://www.lazada.vn/products/chieu-truc-cao-bang-in-hoachieu-truc-tam-tay-bac-mat-lanhdu-kich-thuoclam-theo-yeu-cau-sichieu-cao-bang-hoa-xanh-i2511779007-s12313024730.html?from_gmc=1&fl_tag=1
 
 [caobanggreen.vn]
 match = -39.1%%
