--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-08-06 02:32:00
+lastsearch = 2024-08-06 07:59:18
 
 [shopee.vn]
 match = -28.0%%
@@ -47,9 +47,9 @@ title = Các đối sách lớn của Đài Loan trong những năm tiếp theo
 url = https://nghiencuuchienluoc.org/cac-doi-sach-lon-cua-dai-loan-trong-nhung-nam-tiep-theo/
 
 [books.google.com]
-match = -12.0%%
-title = Kinh tế Việt Nam: Thăng trầm và Đột phá
-url = https://books.google.com/books?id=1Wxg3gafpJ4C&pg=PA432&lpg=PA432&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=P1-gCCzAu7&sig=ACfU3U0PpCMAG9jnjRhDXHtMc8qMZJq8nw&hl=en&sa=X&ved=2ahUKEwjBxbHVpt2HAxXVrokEHVgqKM0Q6AF6BAgXEAM
+match = -16.0%%
+title = Phật điển thông dụng: Lối vào tuệ giác Phật
+url = https://books.google.com/books?id=kTEtEAAAQBAJ&pg=PA468&lpg=PA468&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=lh1RnFFzAQ&sig=ACfU3U3n7tIOPLw4_BuVQhujeXAmRtnzgw&hl=en&sa=X&ved=2ahUKEwjJrfjslN-HAxWIJNAFHZvLCHgQ6AF6BAgjEAM
 
 [cellphones.com.vn]
 match = -52.0%%
@@ -59,7 +59,7 @@ url = https://cellphones.com.vn/sforum/phim-dai-loan
 [www.luavietours.com]
 match = -36.0%%
 title = ĐÀI LOAN 5N4Đ | ĐÀI BẮC – ĐÀI TRUNG – CAO HÙNG
-url = https://www.luavietours.com/du-lich/du-lich-nuoc-ngoai/chau-a/dai-loan/dai-loan-5n4d-dai-bac-dai-trung-cao-hung-2/?date=31-08
+url = https://www.luavietours.com/du-lich/du-lich-nuoc-ngoai/chau-a/dai-loan/dai-loan-5n4d-dai-bac-dai-trung-cao-hung-2/?date=20-07
 
 [www.traveloka.com]
 match = -76.0%%
