--- a/images/chieu-nhua-ha-noi-140x190/config.ini
+++ b/images/chieu-nhua-ha-noi-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html
 lastopen = 2024-08-03 06:31:32
 
 [search]
-lastsearch = 2024-08-06 03:46:13
+lastsearch = 2024-08-06 07:58:56
 
 [www.diepxuan.com]
 match = 48.0%%
 title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html?srsltid=AfmBOoo3ZeXeu3Vg_z469YBCOdFvRWHGpNug_5ogTqYmnO-zcoKXQwHO
 
 [www.facebook.com]
 match = 20.0%%
@@ -17,14 +17,14 @@ title = Chiếu Trúc Tre Việt Nam | Hanoi
 url = https://www.facebook.com/chieutructrevietnam/?locale=vi_VN
 
 [demxanh.com]
-match = -20.0%%
-title = Chiếu Trúc hạt Hương Trúc hạt vàng - Hà Nội
-url = https://demxanh.com/chieu-truc-hat-huong-truc.html
+match = 16.0%%
+title = Chiếu Trúc Tăm Rồng kiểu 1 - Hà Nội
+url = https://demxanh.com/chieu-truc-tam-rong-kieu-1.html?srsltid=AfmBOoqcBVejNQ3t6A641_oM6DOqp931IwphL6GKL7Hxf2dGxP-0z_iN
 
 [chieucoi.com.vn]
-match = -68.0%%
-title = Chiếu cói - Chiếu cói Nga Sơn - Đại lý chiếu cói Toán Mát
-url = https://chieucoi.com.vn/
+match = -60.0%%
+title = Chiếu nhựa - Chiếu cói Nga Sơn - Đại lý chiếu cói Toán Mát
+url = https://chieucoi.com.vn/danh-muc/chieu-nhua/
 
 [tchome.vn]
 match = 36.0%%
@@ -52,9 +52,9 @@ title = BÁO GIÁ CHIẾU TRE TÂY BẮC CHẤT LƯỢNG 100%% - Kho đệm
 url = https://khodem.vn/bao-gia-chieu-tre-tay-bac-chat-luong-100/
 
 [shopee.vn]
-match = -36.0%%
-title = Chiếu nhựa - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/nhựa
+match = 24.0%%
+title = Chiếu Nhựa Mai Huyền ❤️FREESHIP ...
+url = https://shopee.vn/Chiếu-Nhựa-Mai-Huyền-❤️FREESHIP❤️-Chiếu-Nhựa-Hà-Nội-(1-5m-1-6m-1m8-x-2m-1m8x3m-1m8x4m)-i.126028938.4749254076
 
 [demviethome.vn]
 match = -24.0%%
