--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-05 23:18:13
+lastsearch = 2024-08-06 08:12:07
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -27,9 +27,9 @@ title = License renewal procedures
 url = https://www.iihs.org/topics/older-drivers/license-renewal-laws-table
 
 [en.wikipedia.org]
-match = -92.3%%
-title = Anthony Edwards (basketball)
-url = https://en.wikipedia.org/wiki/Anthony_Edwards_(basketball)
+match = -160.0%%
+title = Svara
+url = https://en.wikipedia.org/wiki/Svara
 
 [www.facebook.com]
 match = -61.5%%
@@ -117,9 +117,9 @@ title = States that have Adopted California's Vehicle Regulations
 url = https://ww2.arb.ca.gov/our-work/programs/advanced-clean-cars-program/states-have-adopted-californias-vehicle-regulations
 
 [www.deutschconnectorstore.com]
-match = -253.8%%
-title = 0460-215-16141 | Deutsch/TE | SIze 16 Contact 16-14 Ga
-url = https://www.deutschconnectorstore.com/p-76-deutsch-0460-215-16141-contact-16-14-ga.html
+match = -200.0%%
+title = Deutsch 0460-010-20141 Size 20 Contact 18-16 Ga
+url = https://www.deutschconnectorstore.com/p-700-deutsch-0460-010-20141-contact-18-16-ga.html
 
 [www.saflii.org]
 match = -200.0%%
@@ -253,8 +253,8 @@ url = https://www.denverpost.com/author/georgia-nicols/
 
 [www.prowireusa.com]
 match = -200.0%%
-title = Deutsch 0460-010-20141 Size 20 Contact 18-16 Ga
-url = https://www.prowireusa.com/p-700-deutsch-0460-010-20141-contact-18-16-ga.html
+title = Deutsch 0462-201-20141 Size20 Contact 22-18 Ga
+url = https://www.prowireusa.com/p-81-deutsch-0462-201-20141-contact-22-18-ga.html
 
 [www.icc-cpi.int]
 match = -92.3%%
