--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-08-06 02:20:48
+lastsearch = 2024-08-06 08:09:46
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -17,13 +17,13 @@ title = Đệm bông ép Everhome 1m8 giá bao nhiêu?
 url = https://demxanh.com/dem-bong-ep-everhome-1m8-gia-bao-nhieu.html
 
 [www.ebay.com]
-match = -128.6%%
-title = Everhome 700 TC 100%% Egyptian Cotton Extra Deep Fitted ...
-url = https://www.ebay.com/itm/256190021356
+match = -100.0%%
+title = Everhome 700 TC 100%% Egyptian Cotton Deep Fitted ...
+url = https://www.ebay.com/itm/256326842231
 
 [www.quora.com]
-match = 9.5%%
-title = Vietnamese mixed script
+match = -109.5%%
+title = What are some examples where Vietnamese was written ...
 url = https://www.quora.com/What-are-some-examples-where-Vietnamese-was-written-in-mixed-Han-Latin-script
 
 [sieuthidemonline.vn]
