--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-06 05:31:15
+lastsearch = 2024-08-06 08:09:01
 
 [www.lazada.vn]
 match = -94.4%%
 title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/nem-sieu-nhe/?srsltid=AfmBOoozKYZXHMGx0ja-qthQ45SZDowYJ2ZdVmEHFe9FMFG5_MCzgBfX
+url = https://www.lazada.vn/tag/nem-sieu-nhe/
 
 [m.facebook.com]
 match = -161.1%%
@@ -22,9 +22,9 @@ title = NEM Furniture JSC (@nemfurniturejsc)
 url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [thegioinem.com]
-match = -111.1%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = -122.2%%
+title = Nệm Vạn Thành 5cm, 10cm, 15cm, 20cm giá bao nhiêu?
+url = https://thegioinem.com/nem-van-thanh-5cm--10cm-15cm--20cm.html
 
 [cotienfoods.vn]
 match = -72.2%%
@@ -32,9 +32,9 @@ title = Khi nào nem chua chín? Cách nhận biết ...
 url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
-match = -94.4%%
-title = Bếp nhà Toronto 🇨🇦 | ☘️NEM CHUA LÁ ỔI 15$ 10 cái
-url = https://www.facebook.com/groups/396891758392980/posts/️nem-chua-lá-ổi-15-10-cái-nem-chua-thanh-hóa-20-15-cái-nem-chua-nhà-e-chuẩn-nem-/1218751472873667/
+match = 5.6%%
+title = Nem Chua Sạch Thắng Tuyến
+url = https://www.facebook.com/NemChuaSachThangTuyen/posts/đầu-tuần-khách-ưu-ái-đặt-nhiều-nem-chua-quá-nhà-em-có-sẵn-nem-ăn-được-luôn-nhé-c/826753272575097/
 
 [voz.vn]
 match = 11.1%%
@@ -87,9 +87,9 @@ title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
 url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.tiktok.com]
-match = -77.8%%
-title = How Long to Cook Nem Nuong in Air Fryer
-url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
+match = -138.9%%
+title = Buffet nem nướng 39k và nước mía khổng lồ 15k full ...
+url = https://www.tiktok.com/@50motbua/video/7367416773156539664
 
 [vi.wikipedia.org]
 match = -27.8%%
