--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-06 06:01:25
+lastsearch = 2024-08-06 08:13:11
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -192,9 +192,9 @@ title = 12 Days in Seoul - by LA Seoulite - Everything about Korea
 url = https://laseoulite.substack.com/p/12-days-in-seoul
 
 [www.tiktok.com]
-match = -70.0%%
-title = jg diff (F 12:39pm)#leagueoflegends ...
-url = https://www.tiktok.com/@ttv_jmarh/video/7247922325385956614
+match = -60.0%%
+title = Let's try sour mango from @Fruit Riot ...
+url = https://www.tiktok.com/@snickolas/video/7393700044731387178
 
 [www.imdb.com]
 match = 0.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -155.0%%
-title = Heads of S. Korea's top-10 biz groups received 540.5 bln ...
-url = https://en.yna.co.kr/view/AEN20180218002800320
+match = -105.0%%
+title = (EDITORIAL from Korea JoongAng Daily on April 6) ...
+url = https://en.yna.co.kr/view/AEN20180406000600320
 
 [www.vlr.gg]
 match = -145.0%%
@@ -397,9 +397,9 @@ title = FIDEL'S SISTER WARNED DOMINICANS OF REVOLT
 url = https://www.cia.gov/readingroom/document/cia-rdp67b00446r000500120025-7
 
 [twitter.com]
-match = -25.0%%
-title = Big Bad Bear (@BigBadBear_) / X
-url = https://twitter.com/bigbadbear_
+match = -55.0%%
+title = League of Legends (@LeagueOfLegends) / X
+url = https://twitter.com/leagueoflegends
 
 [www.hastingstribune.com]
 match = -130.0%%
