--- a/images/tui-tuan-anh-180x200/config.ini
+++ b/images/tui-tuan-anh-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-tuan-anh-180x200.html
 lastopen = 2024-06-17 10:42:51
 
 [search]
-lastsearch = 2024-08-06 04:45:56
+lastsearch = 2024-08-06 08:02:07
 
 [www.diepxuan.com]
 match = 26.3%%
@@ -23,8 +23,8 @@ url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive-pocket-cuon.html
 
 [tuananh.vn]
 match = 10.0%%
-title = LÒ XO TÚI RUBY MERRY
-url = https://tuananh.vn/lo-xo-tui-ruby-merry-p445.html
+title = LÒ XO TÚI RUBY POTENCY
+url = https://tuananh.vn/site/Product/446?name=lo-xo-tui-ruby-potency
 
 [dem24h.vn]
 match = -35.0%%
@@ -34,7 +34,7 @@ url = https://dem24h.vn/dem-lo-xo-tui-cuon-adaptive-tuan-anh
 [demviethome.vn]
 match = -140.0%%
 title = Đệm lò xo túi Tuấn Anh Adaptive chính hãng giá rẻ hà nội. ...
-url = https://demviethome.vn/dem-lo-xo-tuan-anh-tui-adaptive/?srsltid=AfmBOoqCRk_LnWnk1LPCi7o-cfw51hxwAzsN5Q9vGesjerWRgGh8FhGD
+url = https://demviethome.vn/dem-lo-xo-tuan-anh-tui-adaptive/
 
 [bedding.vn]
 match = -25.0%%
