CI images update

--- a/images/nem-di-a-mon-9f-2m-22-re/config.ini
+++ b/images/nem-di-a-mon-9f-2m-22-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-2m-22-re.html
 lastopen = 2024-06-10 00:56:34
 
 [search]
-lastsearch = 2024-08-06 06:19:41
+lastsearch = 2024-08-06 09:14:20
 
 [www.tiktok.com]
 match = -83.3%%
@@ -292,9 +292,9 @@ title = 47553 1 111111111 1111 111111 Item Number
 url = https://interchange.puc.texas.gov/Documents/47553_32_961450.PDF
 
 [www.mycouriertribune.com]
-match = -70.8%%
-title = Cowboy UP Triathlon this weekend at Smithville Lake
-url = https://www.mycouriertribune.com/community_living/cowboy-up-triathlon-this-weekend-at-smithville-lake/article_b2b8f55a-f240-5fcd-8807-a37d249dd8a2.html
+match = -87.5%%
+title = Oddsmakers move Walz behind Shapiro as Kamala Harris ...
+url = https://www.mycouriertribune.com/news/national_news/oddsmakers-move-walz-behind-shapiro-as-kamala-harris-pick/article_e2b7159a-7791-5ae2-a0cd-e6e11b264d53.html
 
 [www.researchgate.net]
 match = -58.3%%
