--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-08-06 02:44:51
+lastsearch = 2024-08-06 09:08:47
 
 [tuananh.vn]
-match = 8.0%%
-title = Đệm bông ép 3 mảnh Korea Kaki
-url = https://tuananh.vn/dem-bong-ep-korea-kaki-p112.html
+match = 12.0%%
+title = Đệm bông ép 3 mảnh Korea Gấm
+url = https://tuananh.vn/dem-bong-ep-korea-gam--p110.html
 
 [demxanh.com]
-match = -48.0%%
-title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
+match = -28.0%%
+title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
+url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
 
 [demkhangduy.com]
 match = 25.0%%
@@ -62,9 +62,9 @@ title = Đệm PE Korea cao cấp 1m8 x 2m
 url = https://demgiare.net/dem-pe-korea-cao-cap-1m8-x-2m.html
 
 [demchatluong.com]
-match = -12.0%%
-title = Đệm bông ép Tuấn Anh Korea vỏ gấm 3 mảnh
-url = https://demchatluong.com/san-pham/dem-bong-ep-tuan-anh-korea-vo-gam-3-manh/
+match = 28.0%%
+title = Đệm lò xo Korea Tuấn Anh chính hãng
+url = https://demchatluong.com/san-pham/dem-lo-xo-korea-tuan-anh-chinh-hang/
 
 [www.diepxuan.com]
 match = 31.6%%
