--- a/images/bo-ga-chun-chan-lua-warmdream-180x200-hq/config.ini
+++ b/images/bo-ga-chun-chan-lua-warmdream-180x200-hq/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-lua-warmdream-180x200-hq.html
 lastopen = 2024-06-10 01:18:52
 
 [search]
-lastsearch = 2024-08-06 02:32:44
+lastsearch = 2024-08-06 09:11:33
 
 [www.diepxuan.com]
 match = 45.0%%
 title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
+url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html?srsltid=AfmBOorChkrWXr-7fh97xMJh8QB_7VB1IRlijeGowhOUhnfVxMNsJZuS
 
 [www.amazon.com]
 match = 10.0%%
