--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-06 06:46:04
+lastsearch = 2024-08-06 09:09:27
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -27,14 +27,14 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -194.1%%
-title = Non-alcoholic fatty liver disease and colorectal cancer ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6613648/
+match = -223.5%%
+title = Translational strategies for neuroprotection in ischemic stroke
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3933947/
 
 [books.google.com]
-match = -11.8%%
-title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWLP-n5g&sig=ACfU3U2WgTaLgti-8WQKQyqazLRSgxinlw&hl=en&sa=X&ved=2ahUKEwjnjbm8x96HAxUHwOYEHZxfHTcQ6AF6BAhAEAM
+match = -223.5%%
+title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=chan+5+kg+kq+song&source=bl&ots=zGiVZGlD1G&sig=ACfU3U2UHP-Ct1RjNORRxY4c1D1V-NufKw&hl=en&sa=X&ved=2ahUKEwi11p_EpN-HAxUT5skDHS-HL0wQ6AF6BAgkEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -107,9 +107,9 @@ title = AASV Swine Information Library Catalog
 url = https://www.aasv.org/library/swineinfo/series_index.php?id=4
 
 [www.diepxuan.com]
-match = -5.9%%
-title = Chăn KQ sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-song-5kg.html
+match = -29.4%%
+title = Chăn KQ không sóng 5kg - Điệp Xuân
+url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html?srsltid=AfmBOoqNKNIeK6IEeLSoXRH6xxFkj5jGV9VXjsW9jYEjyTfgOLZd2mBk
 
 [www.kvaser.cn]
 match = -5.9%%
