--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-08-06 08:02:49
+lastsearch = 2024-08-06 09:03:33
 
 [shopee.vn]
-match = -43.5%%
-title = Chiếu trúc Tây Bắc Cao Bằng loại đẹp (Mát Lạnh Mùa Hè)
-url = https://shopee.vn/Chiếu-trúc-Tây-Bắc-Cao-Bằng-loại-đẹp-(Mát-Lạnh-Mùa-Hè)-i.453113145.9960128744
+match = 4.3%%
+title = Chiếu Trúc Cao Bằng - Chiếu trúc cá nhân
+url = https://shopee.vn/Chiếu-Trúc-Cao-Bằng-Chiếu-trúc-cá-nhân-i.81313558.19277857647
 
 [www.diepxuan.com]
 match = 26.1%%
@@ -47,8 +47,8 @@ title = Chiếu trúc Cao Sơn – sản phẩm Việt được tin dùng
 url = https://baocaobang.vn/chieu-truc-cao-son-san-pham-viet-duoc-tin-dung-42036.html
 
 [chieu.com.vn]
-match = 52.6%%
-title = Chiếu Trúc Cao Bằng
+match = -43.5%%
+title = Chiếu Trúc Cao Bằng - Tổng Kho Chiếu Trúc Miền Bắc
 url = https://chieu.com.vn/chieu-truc/chieu-truc-cao-bang
 
 [tiki.vn]
