--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-06 03:39:07
+lastsearch = 2024-08-06 09:07:44
 
 [shopee.vn]
-match = -36.8%%
-title = Chiếu trúc, chiếu tre HT nan nhỏ siêu mát
-url = https://shopee.vn/Chiếu-trúc-chiếu-tre-HT-nan-nhỏ-siêu-mát-i.141565512.24776596764
+match = -126.3%%
+title = Chiếu trúc chiếu tre cho trẻ em, chieu truc hat nằm đẹp ...
+url = https://shopee.vn/Chiếu-trúc-chiếu-tre-cho-trẻ-em-chieu-truc-hat-nằm-đẹp-mát-an-toàn-i.49212472.796826351
 
 [chieutrelanlan.com]
 match = -105.3%%
