--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-08-06 05:48:07
+lastsearch = 2024-08-06 09:07:22
 
 [demxanh.com]
 match = -14.8%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOoqhWhsgyfSbUHX6YQuAofPsHtU9Xugva845FIae935-N9GwJdXO
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [shopee.vn]
 match = 18.5%%
