--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-08-06 02:27:06
+lastsearch = 2024-08-06 09:09:51
 
 [tiki.vn]
 match = -47.6%%
@@ -22,9 +22,9 @@ title = Thủ tục cấp đổi hộ chiếu cho người Đài Loan
 url = https://www.roc-taiwan.org/vn_vi/post/62.html
 
 [www.tiktok.com]
-match = -19.0%%
-title = Cách Xem Lịch Chiếu Film Tại Taiwan
-url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
+match = -66.7%%
+title = 18x2 Beyond Youthful Days Có Chiếu Tại Đìa Loan Ko
+url = https://www.tiktok.com/discover/18x2-beyond-youthful-days-có-chiếu-tại-đìa-loan-ko
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
@@ -89,7 +89,7 @@ url = https://nhandan.vn/dai-loan-trung-quoc-tiep-tuc-tim-kiem-18-nguoi-mat-tich
 [www.diepxuan.com]
 match = 19.0%%
 title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html?srsltid=AfmBOopR_rZzbosRJa5yFp_OaqR9JSv8fpKImuyMUaard8kDiee1bSFB
+url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 
 [znews.vn]
 match = -104.8%%
