--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-06 06:47:24
+lastsearch = 2024-08-06 09:12:55
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -277,9 +277,9 @@ title = Mức đóng bảo hiểm xã hội của công chức thay đổi thế
 url = https://bptv.vn/news/9/159224/muc-dong-bao-hiem-xa-hoi-cua-cong-chuc-thay-doi-the-nao-khi-luong-co-so-du-kien-tang-30
 
 [m.facebook.com]
-match = -123.8%%
-title = AOV News - 【 GLOBAL COLLECTION 】 Dòng trang phục ...
-url = https://m.facebook.com/story.php/?story_fbid=1131799288470192&id=100049203943096
+match = -95.2%%
+title = casual Đà nẵng | KHÁCH SẠN SEL DE MER HOTEL & ...
+url = https://m.facebook.com/groups/303223456724518/posts/2101917873521725/
 
 [thuvienphapluat.vn]
 match = -123.8%%
