--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-08-05 22:34:22
+lastsearch = 2024-08-06 09:18:12
 
 [screenrant.com]
 match = 0.0%%
@@ -117,9 +117,9 @@ title =
 url = https://www.google.com/search?sca_esv=66046235350063f2&sca_upv=1&q=Who+wrote+the+Killing+of+Georgie+lyrics?&sa=X&ved=2ahUKEwi3kc6nucqGAxXykIkEHQ4QIj4QsZYEegQIMhAC
 
 [www.tiktok.com]
-match = -164.3%%
-title = 10FT SHARK PULLS MAN 4 MILES AWAY FROM SHORE!
-url = https://www.tiktok.com/@zak_catchem/video/7320112463750499627?lang=en
+match = 21.4%%
+title = chấp 10 man xanh
+url = https://www.tiktok.com/@lhn510/photo/7363834268344175873
 
 [www.ashrae.org]
 match = 0.0%%
@@ -465,4 +465,9 @@ url = https://www.footlocker.com/category/shoes/jordan/retro-10.html
 match = 0.0%%
 title = 
 url = https://www.godigit.com/international-travel-insurance/citizenship/how-to-get-pr-in-usa
+
+[www.forbes.com]
+match = 0.0%%
+title = 
+url = https://www.forbes.com/sites/andyjsemotiuk/2023/01/11/why-eb-5-immigrant-investors-may-be-facing-an-opportunity-of-a-lifetime/
 
