--- a/images/ruot-chan-hoi-warmdream-200x220/config.ini
+++ b/images/ruot-chan-hoi-warmdream-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-chan-hoi-warmdream-200x220.html
 lastopen = 2024-06-07 01:01:31
 
 [search]
-lastsearch = 2024-08-06 08:11:09
+lastsearch = 2024-08-06 09:09:08
 
 [www.dreamland.vn]
 match = 20.8%%
@@ -24,7 +24,7 @@ url = https://www.diepxuan.com/ruot-chan-hoi-warmdream-200x220.html
 [vuanem.com]
 match = -25.8%%
 title = Ruột Chăn Mền Cao Cấp, Chăn Bông Chính Hãng Giá Rẻ ...
-url = https://vuanem.com/chan-ga-goi/ruot-chan
+url = https://vuanem.com/chan-ga-goi/ruot-chan?srsltid=AfmBOooB__cy47_6627sbFqomkw31RGPBeUgpk-AYW4d6zqvnVDnc3m9
 
 [www.instagram.com]
 match = -45.2%%
