--- a/images/ruot-goi-ke-long-vu/config.ini
+++ b/images/ruot-goi-ke-long-vu/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-long-vu.html
 lastopen = 2024-06-09 23:56:32
 
 [search]
-lastsearch = 2024-08-06 03:31:53
+lastsearch = 2024-08-06 09:05:39
 
 [hanvico.net.vn]
-match = -42.1%%
-title = Ruột gối lông vũ cao cấp 30x50 - Hanvico
-url = https://hanvico.net.vn/products/ruot-goi-long-vu-cao-cap-30x50
+match = -10.5%%
+title = Ruột gối lông vũ cao cấp - Hanvico
+url = https://hanvico.net.vn/collections/ruot-goi-long-vu-cao-cap
 
 [demvip.vn]
 match = 10.5%%
@@ -52,9 +52,9 @@ title = Ruột Gối Nằm Cao Cấp À Ơi Concept 50x70cm (01 cái)
 url = https://aoiconcept.com/products/ruot-goi-nam-cao-cap-a-oi-concept-50x70cm-01-cai-gon-bong-hat-long-vu
 
 [jysk.vn]
-match = -94.7%%
-title = Ruột gối | lông vũ | GALDEBERGET | trắng | 50x70/75cm
-url = https://jysk.vn/ruot-goi-long-vu-galdeberget-trang-50x7075cm-750gr
+match = -100.0%%
+title = Ruột gối lông vũ | KRONBORG LOFTET | 50x70cm | 720gr
+url = https://jysk.vn/ruot-goi-long-vu-kronborg-loftet-50x70cm-720gr
 
 [shopee.vn]
 match = -110.5%%
@@ -117,9 +117,9 @@ title = Ruột gối lông vũ Lasante - nâng niu giấc ngủ của bạn mộ
 url = http://lasantedepari.com/vi/danh-muc/ruot-goi/ruot-goi-long-vu/
 
 [tiki.vn]
-match = -100.0%%
-title = Mua Gối Lông Vũ Nhân Tạo Serena Cao Cấp Ruột ...
-url = https://tiki.vn/goi-long-vu-nhan-tao-serena-cao-cap-ruot-goi-long-vu-mem-ke-co-goi-dau-nam-ngu-ngon-chuan-khach-san-nam-sao-p251370053.html
+match = -94.7%%
+title = Ruột gối lông vũ everon hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=ruột gối lông vũ everon
 
 [www.diepxuan.com]
 match = 15.8%%
