--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-08-06 05:39:20
+lastsearch = 2024-08-06 09:15:03
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/list/giường xếp
 [sofatoanquoc.com]
 match = 30.0%%
 title = Giường ngủ bọc da mã 15
-url = https://sofatoanquoc.com/giuong-ngu-boc-da-ma-15.html?srsltid=AfmBOooidGo3bNSIJgh83C9kcEP7bZ_-_X9UNdZRZJpTwV239M2v4cJb
+url = https://sofatoanquoc.com/giuong-ngu-boc-da-ma-15.html
 
 [noithathoaphat360.com]
 match = -55.0%%
@@ -47,9 +47,9 @@ title = Bộ giường tủ cổ điển nhập khẩu GR B15
 url = https://greenfurni.vn/bo-giuong-tu-co-dien-nhap-khau-gr-b15/
 
 [noithattana.vn]
-match = -140.0%%
-title = Bộ giường ngủ tân cổ điển giá rẻ đẹp, cao cấp nhập khẩu ...
-url = https://noithattana.vn/giuong-tu-tan-co-dien/
+match = -60.0%%
+title = Bộ Giường Tủ Gỗ MDF Hiện Đại Nhập Khẩu TA-D15
+url = https://noithattana.vn/san-pham/bo-giuong-tu-go-mdf-hien-dai-nhap-khau-ta-d11/
 
 [tiki.vn]
 match = -50.0%%
@@ -72,9 +72,9 @@ title = GIƯỜNG NGỦ BỌC DA CAO CẤP HIỆN ĐẠI - LB15
 url = https://nemphuoclong.vn/giuong-ngu-boc-da-cao-cap-hien-dai-lb15
 
 [noithatcaco.vn]
-match = -135.0%%
-title = 65 Mẫu giường ngủ trẻ em bé trai bé gái - Thiết kế siêu xinh
-url = https://noithatcaco.vn/collections/giuong-ngu-tre-em
+match = -115.0%%
+title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
+url = https://noithatcaco.vn/collections/giuong-ngu
 
 [www.quiphuc.com]
 match = 0.0%%
