--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-06 07:58:16
+lastsearch = 2024-08-06 09:10:52
 
 [demxanh.com]
-match = 0.0%%
-title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
+match = -22.7%%
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html?srsltid=AfmBOoqNfImjLf9dda6DZ4wGf2cQqxChxhNsyGXXJ-2UurKYqVM9wMRY
 
 [demre.com.vn]
 match = 18.2%%
@@ -17,9 +17,9 @@ title = Bộ thảm ghế gỗ 1 dài 2 ngắn
 url = https://demre.com.vn/bo-tham-ghe-go-1-dai-2-ngan-5
 
 [decoviet.vn]
-match = -50.0%%
-title = Thảm Lót Ghế Sofa | Thảm Phòng Khách Giá Rẻ
-url = https://decoviet.vn/tham-lot-ghe-sofa/
+match = 22.2%%
+title = Thảm Sofa Biên Hòa
+url = https://decoviet.vn/tham-sofa-bien-hoa/
 
 [demolympia.com]
 match = -40.9%%
@@ -34,7 +34,7 @@ url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 [ru9.vn]
 match = -86.4%%
 title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
+url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu?srsltid=AfmBOooW1QTrFO9Jfp79f3CjMBpf2VU-bow04HdkiFhqJ7qQAvTzysM0
 
 [flexhouse.vn]
 match = -90.9%%
@@ -44,7 +44,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 [www.diepxuan.com]
 match = 50.0%%
 title = Điệp Xuân Thảm giường nỉ 150x190
-url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
+url = https://www.diepxuan.com/tham-giuong-ni-150x190.html?srsltid=AfmBOopPrhi6Pq9MixQTLqID2sILJV5OGZwg8avcrV3nyOZ38BbvSXc0
 
 [www.lazada.vn]
 match = -77.3%%
