--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-06 06:52:08
+lastsearch = 2024-08-06 09:51:35
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -187,9 +187,9 @@ title = Thái Sơn Bắc bám đuổi đội dẫn đầu
 url = https://nhandan.vn/thai-son-bac-kien-tri-bam-duoi-thai-son-nam-thanh-pho-ho-chi-minh-post816958.html
 
 [hanoimoi.vn]
-match = -200.0%%
-title = Việt Nam - Hàn Quốc kết nối giao thương về công nghệ ...
-url = https://hanoimoi.vn/viet-nam-han-quoc-ket-noi-giao-thuong-ve-cong-nghe-thong-tin-673757.html
+match = -218.8%%
+title = Olympic Paris 2024: Bảng tổng sắp huy chương (6h ngày 6 ...
+url = https://hanoimoi.vn/olympic-paris-2024-bang-tong-sap-huy-chuong-6h-ngay-6-8-2024-673978.html
 
 [thanhnien.vn]
 match = -200.0%%
@@ -552,9 +552,9 @@ title = Liên hoan Các Câu Lạc bộ Nhà trọ công nhân ...
 url = https://vietyen.bacgiang.gov.vn/chi-tiet-tin-tuc/-/asset_publisher/VeCP91o7rg3d/content/lien-hoan-cac-cau-lac-bo-nha-tro-cong-nhan-thi-xa-viet-yen-nam-2024
 
 [vtcnews.vn]
-match = -162.5%%
-title = XSST 8/5 - Kết quả xổ số Sóc Trăng hôm nay 8/5/2024
-url = https://vtcnews.vn/xsst-8-5-ket-qua-xo-so-soc-trang-hom-nay-8-5-2024-kqxsst-8-5-ar869497.html
+match = -206.2%%
+title = Dự báo thời tiết TP.HCM ngày 6/8: Ngày nắng gián đoạn ...
+url = https://vtcnews.vn/du-bao-thoi-tiet-tp-hcm-ngay-6-8-ngay-nang-gian-doan-chieu-toi-mua-dong-ar887649.html
 
 [chieulongdinh.com.vn]
 match = -93.8%%
@@ -862,9 +862,9 @@ title = Công ty nước sạch Hà Nội | Hanoi Water Limited Company
 url = http://www.hawacom.vn/
 
 [thoibaotaichinhvietnam.vn]
-match = -218.8%%
-title = Ngày 6/8: Giá dầu tăng giảm trái chiều do áp lực bán tháo ...
-url = https://thoibaotaichinhvietnam.vn/ngay-68-gia-dau-tang-giam-trai-chieu-do-ap-luc-ban-thao-co-phieu-toan-cau-156499.html
+match = -193.8%%
+title = Ngày 6/8: Giá heo hơi điều chỉnh mức tăng, giảm từ 1.000
+url = https://thoibaotaichinhvietnam.vn/ngay-68-gia-heo-hoi-dieu-chinh-muc-tang-giam-tu-1000-2000-dongkg-156495.html
 
 [baohagiang.vn]
 match = -156.2%%
@@ -885,4 +885,14 @@ url = https://congly.vn/gia-vang-hom-nay-5-8-lac-quan-vao-da-tang-cua-gia-vang-4
 match = -206.2%%
 title = HĐND Xuân Mỹ bàn giải pháp phát triển KT-XH 6 tháng ...
 url = https://nghixuan.hatinh.gov.vn/chinh-tri/hdnd-xuan-my-ban-giai-phap-phat-trien-kt-xh-6-thang-cuoi-nam.html
+
+[langsontv.vn]
+match = -200.0%%
+title = Câu lạc bộ Thiện nguyện Từ trái tim Lạng Sơn trao tủ sách ...
+url = https://langsontv.vn/news/475/73612/cau-lac-bo-thien-nguyen-tu-trai-tim-lang-son-trao-tu-sach-cho-cac-truong-hoc-tren-dia-ban-huyen-cao-loc
+
+[cadn.com.vn]
+match = -87.5%%
+title = Kỳ cuối: Ám ảnh chuyến đi “một chiều”
+url = https://cadn.com.vn/ky-cuoi-am-anh-chuyen-di-mot-chieu-post299266.html
 
