--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-06 05:44:41
+lastsearch = 2024-08-06 09:51:12
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -497,9 +497,9 @@ title = joint_statement_ra.pdf
 url = https://www.justice.gov/sites/default/files/crt/legacy/2010/12/14/joint_statement_ra.pdf
 
 [www.montgomerycountymd.gov]
-match = -182.4%%
-title = County-Provided Recycling and Trash Holiday Collections ...
-url = https://www.montgomerycountymd.gov/dep/resources/files/trash-recycling/holidays/holiday-collection-schedule.pdf
+match = 11.8%%
+title = Noise Control Home
+url = https://www.montgomerycountymd.gov/DEP/contact/noise.html
 
 [www.puc.pa.gov]
 match = -105.9%%
@@ -585,4 +585,29 @@ url = https://didongviet.vn/dchannel/hinh-nen-hoa-dep-cho-iphone/
 match = -205.9%%
 title = No Good Cause for Discrimination: Some Evictions Are Never ...
 url = https://www.hud.gov/sites/dfiles/FHEO/documents/Never Good Cause.pdf
+
+[www.yaman.vn]
+match = -55.6%%
+title = YA-MAN VN
+url = https://www.yaman.vn/
+
+[dep.nj.gov]
+match = -105.9%%
+title = NJDEP-N.J.A.C. 7:8, Stormwater Management,
+url = https://dep.nj.gov/wp-content/uploads/rules/rules/njac7_8.pdf
+
+[www.polksheriff.org]
+match = -135.3%%
+title = Polk County Sheriff's Office: Sheriff Grady Judd
+url = https://www.polksheriff.org/
+
+[www.maine.gov]
+match = -82.4%%
+title = Shorefront Property Owner Information
+url = https://www.maine.gov/dep/land/watershed/camp/index.html
+
+[law.justia.com]
+match = -111.8%%
+title = Due Process of Law :: Fourteenth Amendment
+url = https://law.justia.com/constitution/us/amendment-14/04-due-process-of-law.html
 
