--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-08-06 00:42:13
+lastsearch = 2024-08-06 09:56:01
 
 [www.instagram.com]
 match = -123.1%%
@@ -12,9 +12,9 @@ title = Chan Dior Sunshade (@chan_dior_sunshade)
 url = https://www.instagram.com/chan_dior_sunshade/
 
 [hk.linkedin.com]
-match = -100.0%%
-title = Hoi Yee Ng - Christian Dior Couture
-url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
+match = -215.4%%
+title = Vincy Chan - Christian Dior高級時裝公司
+url = https://hk.linkedin.com/in/vincy-chan-982992221
 
 [wwd.com]
 match = -253.8%%
@@ -27,14 +27,14 @@ title = Results - LSA Student Government Winter 2023 Elections
 url = https://vote.umich.edu/index.php?mode=results&election=199828
 
 [www.linklaters.com]
-match = -71.4%%
-title = Sitemap
-url = https://www.linklaters.com/en-us/sitemap
+match = -50.0%%
+title = Podcasts
+url = https://www.linklaters.com/en-us/knowledge/podcasts
 
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/Dior
+url = https://en.wikipedia.org/wiki/Catherine_Dior
 
 [press.fourseasons.com]
 match = -269.2%%
@@ -109,7 +109,7 @@ url = https://my.linkedin.com/in/wai-seng-chan-791010270
 [www.dior.com]
 match = -30.8%%
 title = Dior official website
-url = https://www.dior.com/en_hk
+url = https://www.dior.com/en_int/fashion
 
 [www.gettyimages.fr]
 match = -253.8%%
@@ -370,4 +370,9 @@ url = https://www.robbreport.com.vn/dioriviera-da-cap-ben-hoi-an
 match = -253.8%%
 title = Cửa hàng pop-up của BST Dioriviera 2024 dừng chân tại ...
 url = https://www.elle.vn/tin-thoi-trang/cua-hang-pop-up-cua-bst-dioriviera-2024-chinh-thuc-dung-chan-tai-da-nang
+
+[zmj.unibo.it]
+match = -261.5%%
+title = View of Leslie Cheung: a Fashion Pioneer, a Dandy and ...
+url = https://zmj.unibo.it/article/view/19527/18122
 
