--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-08-06 05:46:56
+lastsearch = 2024-08-06 09:54:40
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -17,9 +17,9 @@ title = Thắng Lợi
 url = http://nemxinh.net/thuong-hieu/thang-loi
 
 [shopee.vn]
-match = -80.0%%
-title = chăn ga thắng lợi giá tốt Tháng 8, 2024 Chăn, Ga, Gối & Nệm
-url = https://shopee.vn/search?category=11036670&keyword=chăn ga thắng lợi&page=0&subcategory=11036683
+match = -28.0%%
+title = vỏ chăn thắng lợi giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=vỏ chăn thắng lợi
 
 [congtynemthangloi.com]
 match = -72.0%%
