--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-08-06 02:53:37
+lastsearch = 2024-08-06 09:51:56
 
 [www.bible.com]
-match = -128.6%%
-title = MARKA 16 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/MRK.16.MIZCLBSI
+match = -135.7%%
+title = JOHANA 16 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/JHN.16.MIZCLBSI
 
 [tiki.vn]
 match = -171.4%%
@@ -24,7 +24,7 @@ url = https://mungmocmien.com/products/man-chup-tu-bung-2016-code-f2-9
 [munghoangphat.com]
 match = -135.7%%
 title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
-url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
+url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-xanh.html
 
 [manthutrang.com]
 match = -207.1%%
