--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-08-06 06:20:42
+lastsearch = 2024-08-06 09:58:23
 
 [www.reddit.com]
-match = -82.6%%
-title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
-url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
+match = -104.3%%
+title = Riot is cutting back budget on esports? : r/leagueoflegends
+url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
 
 [en.wikipedia.org]
 match = -58.3%%
@@ -282,9 +282,9 @@ title = Introduction
 url = https://www.degruyter.com/document/doi/10.1515/9780824887964-013/pdf?licenseType=restricted
 
 [en.yna.co.kr]
-match = -69.6%%
-title = (EDITORIAL from Korea JoongAng Daily on April 6) ...
-url = https://en.yna.co.kr/view/AEN20180406000600320
+match = -113.0%%
+title = Heads of S. Korea's top-10 biz groups received 540.5 bln ...
+url = https://en.yna.co.kr/view/AEN20180218002800320
 
 [lol.fandom.com]
 match = 0.0%%
@@ -472,9 +472,9 @@ title = Tajik President's Demand For 'Respect' From Putin Viewed ...
 url = https://www.rferl.org/a/tajikistan-russia-rahmon-youtube-respect/32084773.html
 
 [twitter.com]
-match = -58.3%%
-title = Ifang Bremer
-url = https://twitter.com/IfangBremer/status/1801089320365031905
+match = -34.8%%
+title = League of Legends (@LeagueOfLegends) / X
+url = https://twitter.com/leagueoflegends
 
 [www.indiatoday.in]
 match = 0.0%%
