CI images update

--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-08-06 02:20:07
+lastsearch = 2024-08-06 10:20:07
 
 [demxanh.com]
-match = 0.0%%
-title = Chiếu điều hòa lụa cao cấp giá rẻ nhất thị trường
-url = https://demxanh.com/chieu-dieu-hoa-lua-cao-cap.html
+match = 34.5%%
+title = Chiếu điều hòa cao su non Tencel xanh nhạt
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOordCddeDUgb0HEA4nzqtvjFS2DOYGJVsqcgDd6Qvd1ee5NU3_Sz
 
 [entershopping.vn]
 match = -13.8%%
@@ -39,7 +39,7 @@ url = https://khodem.vn/chieu-dieu-hoa-cao-su-non/
 [www.diepxuan.com]
 match = 58.6%%
 title = Chiếu điều hòa cao su 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
+url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html?srsltid=AfmBOoqncAhhr_YP4VclCwNmOdROQFNTMYIIiD6K84bfRFlTKDEWYcB6
 
 [russo.vn]
 match = -20.7%%
@@ -47,9 +47,9 @@ title = Chiếu điều hòa cao su non chính hãng đẹp nhất 2024 - Russo
 url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
 
 [thegioidemonline.com]
-match = 34.5%%
-title = Chiếu điều hòa cao su non Tencel Xanh nhạt
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
+match = 37.9%%
+title = Chiếu điều hòa cao su non Tencel màu Ghi
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-ghi.html?srsltid=AfmBOoo-NCFr0wFFhstfM_6n5YqcpxHx2Yz8SARX89vWYpvaBljk1UPZ
 
 [shopee.vn]
 match = -27.6%%
