--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-06 08:12:07
+lastsearch = 2024-08-06 10:18:26
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -352,9 +352,9 @@ title = Charlie Condon - 2024 Baseball Roster
 url = https://georgiadogs.com/sports/baseball/roster/charlie-condon/7496
 
 [www.nature.com]
-match = -230.8%%
-title = 68 Ga generator based on nano-SnO 2 for PET imaging
-url = https://www.nature.com/articles/s41598-020-69659-8
+match = -246.2%%
+title = Association of baseline serum sodium with long-term ...
+url = https://www.nature.com/articles/s41598-024-69342-2
 
 [www.dictionary.com]
 match = 0.0%%
@@ -715,4 +715,9 @@ url = https://weather.interia.com/long-term-forecast-dar-gani-gund,cId,577169
 match = -300.0%%
 title = Women's Flag Football vs Ottawa University (Kan.) on 3/16/2024
 url = https://tunighthawks.com/sports/womens-flag-football/stats/2024/ottawa-university-kan-/boxscore/5765
+
+[www.nbcnews.com]
+match = -284.6%%
+title = Debby updates: Storm made landfall as Category 1 hurricane
+url = https://www.nbcnews.com/news/weather/live-blog/hurricane-debby-live-updates-landfall-florida-big-bend-rcna165111
 
