--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-08-06 06:54:19
+lastsearch = 2024-08-06 10:15:22
 
 [everonvn.com.vn]
-match = -74.1%%
-title = Bảng giá bán bộ chăn ga gối Hàn Quốc Everon Epc-19041 in ...
-url = https://everonvn.com.vn/everon/750/bo-everon-epc-19041
+match = -66.7%%
+title = Bảng Giá Bán Bộ Chăn Ga Gối Hàn Quốc Everon Est-19032 ...
+url = https://everonvn.com.vn/everon/742/bo-everon-est19032?srsltid=AfmBOoqig_tuDOpp0D0vaHRPVcp5q5Rsl7fd8Tx-m8fymu7_beZSQ-4X
 
 [everon.com.vn]
 match = 40.0%%
 title = BỘ EVERON EPM 19064 Modal
-url = https://everon.com.vn/epm-19064/
+url = https://everon.com.vn/epm-19064/?srsltid=AfmBOooUJ7Pl0IRVDxHawY3CYKKnHnCgo_4C0--X9diMHuzCgYLcPqWC
 
 [demxanh.com]
 match = 18.5%%
 title = Bộ chăn ga gối Everon EPM19065
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm19065.html
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm19065.html?srsltid=AfmBOoqI63p1O22KmzhjLyAlfClTyJFwdlJfIztO1UtJu3-yERYsIzKq
 
 [shopee.vn]
 match = -48.1%%
