--- a/images/chieu-dieu-hoa-lua-160x200/config.ini
+++ b/images/chieu-dieu-hoa-lua-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-160x200.html
 lastopen = 2024-08-02 20:47:57
 
 [search]
-lastsearch = 2024-08-06 06:49:03
+lastsearch = 2024-08-06 10:17:26
 
 [demxanh.com]
 match = 34.6%%
 title = Chiếu điều hòa mây viền lụa loại đẹp
-url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html?srsltid=AfmBOoqajG-TLkMkooxM0QTnkuLwRA10CFDDs0W33mAZcwGZ_evoa7fV
+url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
 
 [thegioidemviet.vn]
 match = -15.4%%
@@ -22,9 +22,9 @@ title = Mua Chiếu Điều Hòa Cao Su Non Latex Loại 1 Màu
 url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=263307875
 
 [foreverbedding.net]
-match = 38.5%%
-title = Chiếu điều hòa - Forever Bedding
-url = https://foreverbedding.net/chieu-dieu-hoa?srsltid=AfmBOor88AXdzYYa7fqf93HuXd4ClFE0D3vDjN1GJ5TefMLY52IUcr3g
+match = -53.8%%
+title = Giải Đáp Thắc Mắc Nên Mua Chiếu Điều Hòa Hay Chiếu Trúc?
+url = https://foreverbedding.net/nen-mua-chieu-dieu-hoa-hay-chieu-truc
 
 [chieutrelanlan.com]
 match = 42.3%%
@@ -42,9 +42,9 @@ title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
 url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [www.lazada.vn]
-match = 42.3%%
-title = Chiếu Lụa điều Hòa Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/chiếu-lụa-điều-hòa/?srsltid=AfmBOopxLe47sRDEjsSzq1eqIwprF8MIZKHCdgHkHtvna-FGMysAJbkI
+match = -46.2%%
+title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938102178.html
 
 [nanara.vn]
 match = 7.7%%
