--- a/images/nem-sieu-nhe-5f-16/config.ini
+++ b/images/nem-sieu-nhe-5f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-5f-16.html
 lastopen = 2024-06-10 00:33:56
 
 [search]
-lastsearch = 2024-08-06 03:35:20
+lastsearch = 2024-08-06 10:19:25
 
 [shopee.vn]
 match = -161.1%%
@@ -49,12 +49,12 @@ url = https://www.traveloka.com/vi-vn/explore/culinary/30-mon-an-ngon-sai-gon/58
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html
+url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOoq9XRoIcJNJwMWr1I7Rc_WQ4NYBSSZE8i5W_uMkaYUaneD3pmQO
 
 [m.facebook.com]
-match = 0.0%%
-title = Hà Nội Riviu - Riviu.vn
-url = https://m.facebook.com/groups/Thanhriviu.Hanoi/posts/1463480184315713/
+match = -27.8%%
+title = Chợ cư dân Ecohome 3 | #CCDEG
+url = https://m.facebook.com/groups/Ecohome3/posts/1896943557458121/
 
 [www.tiktok.com]
 match = -194.4%%
@@ -162,9 +162,9 @@ title = MẠNH TIẾN GIÁ SỈ - CHUYÊN PHÂN PHỐI CUNG CẤP CÁC ...
 url = https://manhtiengiasi.com/
 
 [www.sendo.vn]
-match = -127.8%%
-title = Nệm 1.6 X 2M Siêu Sang, Giá Cực Tốt, Tiết Kiệm Chi Phí
-url = https://www.sendo.vn/nem-16-x-2m.htm
+match = -77.8%%
+title = Nệm 1M4 Siêu Chất, Giá Mê Ly, Với Nhiều Ưu Đãi
+url = https://www.sendo.vn/nem-1m4.htm
 
 [chandrapgiasi.vn]
 match = -77.8%%
