--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-08-06 09:10:12
+lastsearch = 2024-08-06 10:14:42
 
 [www.tui.co.uk]
-match = -153.3%%
-title = Cruise Calendar 2024 / 2025 | Marella Cruises
-url = https://www.tui.co.uk/cruise/cruise-calendar/
+match = -180.0%%
+title = Caribbean Cruises 2024 / 2025 | Marella Cruises
+url = https://www.tui.co.uk/cruise/caribbean-cruises/
 
 [www.travelgossip.co.uk]
 match = 0.0%%
@@ -77,19 +77,19 @@ title = Marella Cruises in Asia, sailing from Singapore
 url = https://www.southamptoncruisecentre.com/latest-news/marella-cruises-to-asia-with-dreamliner-to-singapore/
 
 [www.tuigroup.com]
-match = -233.3%%
-title = World's leading tourism business TUI Group set to grow in ...
-url = https://www.tuigroup.com/en-en/media/press-releases/2015/20151125-worlds-leading-tourism-business-tui-group-set-to-grow-in-south-east-asia
+match = -26.7%%
+title = Reports & Presentations
+url = https://www.tuigroup.com/en-en/investors/reports-and-presentations
 
 [www.seascanner.com]
-match = -220.0%%
-title = Asia Cruise with Mein Schiff 6 14 days from/to Singapore ...
+match = -140.0%%
+title = Asia Cruise with Mein Schiff 6 on 12/02/2025
 url = https://www.seascanner.com/cruise-k235506-asia-mein-schiff-6-singapore
 
 [www.cruisemapper.com]
-match = -220.0%%
-title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026 | ...
-url = https://www.cruisemapper.com/cruise-lines/TUI-Cruises-32
+match = -240.0%%
+title = Marella Discovery 2 Itinerary, Current Position, Ship Review
+url = https://www.cruisemapper.com/ships/Marella-Discovery-2-651
 
 [www.mybaggage.com]
 match = -73.3%%
@@ -267,7 +267,7 @@ title = EQS-PVR: TUI AG: Release according to Article 40, Section 1 ...
 url = https://markets.businessinsider.com/news/stocks/eqs-pvr-tui-ag-release-according-to-article-40-section-1-of-the-wphg-the-german-securities-trading-act-with-the-objective-of-europe-wide-distribution-1033632211
 
 [www.teddyblake.com]
-match = -226.7%%
-title = Teddy Blake: Luxury Designer Bags, 100%% Made In Italy ...
+match = -260.0%%
+title = Teddy Blake: Luxury Designer Bags, 100%% Made In Italy, Fair ...
 url = https://www.teddyblake.com/
 
