--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-08-06 08:10:07
+lastsearch = 2024-08-06 10:39:48
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -47,9 +47,9 @@ title = Mẫu chăn ga gối cao cấp mã mầu UC22-019
 url = https://songhong.info/chan-ga-goi-uc019
 
 [cuahangchangagoidem.com]
-match = -10.7%%
-title = 13 Bộ Chăn Ga Gối Đệm Cưới Màu Đỏ Đẹp, Ý Nghĩa 2023
-url = https://cuahangchangagoidem.com/chan-ga-goi-dem-cuoi-mau-do/
+match = -7.1%%
+title = 3 Bộ Chăn Ga Gối Đệm Màu Xám Sang Trọng Với Giá Tốt☑️
+url = https://cuahangchangagoidem.com/chan-ga-goi-dem-mau-xam/
 
 [goni.vn]
 match = 7.1%%
@@ -265,4 +265,9 @@ url = https://xamvn.casa/r/nguoi-buon-gio-tuyen-tap-truyen-ngan.571337/
 match = -10.7%%
 title = Bộ Ga Gối Cotton TC Màu Trơn - Notag Nhà Tamy Decor
 url = https://tamydecor.com/sanpham/cotton-tc-mau-tron/
+
+[mym.com.vn]
+match = 7.1%%
+title = Bộ Chăn Drap Gối Cotton Xô In Họa Tiết - 04
+url = https://mym.com.vn/bo-chan-drap-goi-160x200cm180x200cm-cotton-xo-in-hoa-tiet-04
 
