--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-08-06 06:30:01
+lastsearch = 2024-08-06 10:43:15
 
 [demxanh.com]
-match = -3.3%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 33.3%%
+title = Chiếu điều hòa Nhật Bản NEKIO chính hãng
+url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html
 
 [suongtuyet.com]
-match = -13.3%%
-title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
-url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
+match = 16.7%%
+title = có nên sử dụng chiếu điều hòa không?
+url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
 
 [shopee.vn]
 match = 23.3%%
@@ -69,7 +69,7 @@ url = https://thegioinem.com/chieu-dieu-hoa-cao-su-non.html
 [xn--nekiovitnam-y69e.vn]
 match = 3.3%%
 title = Bảng giá chiếu mây điều hòa 2024 - Nekio Việt Nam
-url = https://xn--nekiovitnam-y69e.vn/bang-gia-chieu-may-dieu-hoa-2023/?srsltid=AfmBOoonYYGrShrQU_9c_rMUYFqZlMeBc0mTuPjjAGH2xIb7nASooNfu
+url = https://xn--nekiovitnam-y69e.vn/bang-gia-chieu-may-dieu-hoa-2023/
 
 [chiaki.vn]
 match = 6.7%%
