--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-06 06:39:18
+lastsearch = 2024-08-06 10:34:34
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -372,9 +372,9 @@ title = 16 valve lash setting, MPI engine
 url = http://www.fixkick.com/t-belt/LASH/Lash16va.html
 
 [www.otofun.net]
-match = -81.2%%
-title = Lỗi cắm chìa khóa k vặn đề được ô tô
-url = https://www.otofun.net/threads/loi-cam-chia-khoa-k-van-de-duoc-o-to.880556/
+match = -150.0%%
+title = Cấm oto chiều Hàng Cót (gầm cầu) - Ngã 4 Hàng Đậu ...
+url = https://www.otofun.net/threads/cam-oto-chieu-hang-cot-gam-cau-nga-4-hang-dau.238402/
 
 [baolamdong.vn]
 match = -6.2%%
