--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-06 09:51:35
+lastsearch = 2024-08-06 10:36:19
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -282,9 +282,9 @@ title = Địa chấn lớn nhất EURO 2024: Georgia đánh bại Bồ Đào ..
 url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-nha-khien-ronaldo-hoan-toan-tat-tieng-a178337.html
 
 [vietstock.vn]
-match = -225.0%%
-title = Phân tích kỹ thuật phiên chiều 05/08: Tâm lý thận trọng bao ...
-url = https://vietstock.vn/2024/08/phan-tich-ky-thuat-phien-chieu-0508-tam-ly-than-trong-bao-trum-thi-truong-585-1216444.htm
+match = -162.5%%
+title = Góc nhìn 02/08: Tín hiệu rung lắc đã được dự báo trước?
+url = https://vietstock.vn/2024/08/goc-nhin-0208-tin-hieu-rung-lac-da-duoc-du-bao-truoc-145-1215750.htm
 
 [baohungyen.vn]
 match = -200.0%%
