--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-06 09:17:28
+lastsearch = 2024-08-06 10:40:51
 
 [chieutrucsaigon.com]
 match = -8.3%%
@@ -170,4 +170,24 @@ url = https://dangcongsan.vn/tieu-diem/loi-keu-goi-toan-quoc-khang-chien-19-12-1
 match = 0.0%%
 title = CÔNG TY CỔ PHẦN CẤP NƯỚC CHỢ LỚN
 url = https://capnuoccholon.com.vn/
+
+[www.google.com]
+match = -41.7%%
+title = maps/@21.001139,105.847882,17z?hl=vi
+url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
+
+[baotintuc.vn]
+match = -100.0%%
+title = Xử lý tình trạng lấn chiếm sân chơi tập thể sau phản ánh ...
+url = https://baotintuc.vn/thoi-su/xu-ly-tinh-trang-lan-chiem-san-choi-tap-the-sau-phan-anh-cua-bao-tin-tuc-20240805141942058.htm
+
+[www.evn.com.vn]
+match = 16.7%%
+title = Mực nước các hồ thủy điện
+url = https://www.evn.com.vn/c3/thong-tin-ho-thuy-dien/Muc-nuoc-cac-ho-thuy-dien-117-123.aspx
+
+[vacpa.org.vn]
+match = -360.0%%
+title = Vacpa
+url = https://vacpa.org.vn/
 
