--- a/images/chieu-truc-den-khong-vien-lson-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 lastopen = 2024-06-07 00:19:36
 
 [search]
-lastsearch = 2024-08-06 07:00:39
+lastsearch = 2024-08-06 10:38:06
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -27,9 +27,9 @@ title = Chiếu Trúc Cao Cấp Hạt Đen Không Viền
 url = https://dem24h.vn/chieu-truc-hat-den-khong-vien
 
 [chieutrelanlan.com]
-match = 27.3%%
-title = Chiếu trúc mắt to màu trắng không viền 160x190cm
-url = https://chieutrelanlan.com/chieu-truc-mat-to-mau-trang-loai-khong-vien-160x190cm-40.html
+match = 21.2%%
+title = Chiếu trúc mắt nhỏ có viền màu đen 180x200cm (1m8)
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-180x200cm-32.html
 
 [tiki.vn]
 match = 18.2%%
@@ -42,9 +42,9 @@ title = CHIẾU TRÚC 1M8 HẠT VÀNG KHÔNG VIỀN TPHCM
 url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-1m8-hat-vang-khong-vien-tphcm-80.html
 
 [shopee.vn]
-match = -3.0%%
-title = Chiếu trúc 1m6 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/trúc/1m6
+match = 3.0%%
+title = Chiếu trúc hạt đen không viền (hàng VN cao cấp loại 1, BH ...
+url = https://shopee.vn/Chiếu-trúc-hạt-đen-không-viền-(hàng-VN-cao-cấp-loại-1-BH-1-năm)-i.76806530.1285760215
 
 [vongxepsaigon.vn]
 match = 27.3%%
