--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-06 10:18:26
+lastsearch = 2024-08-06 10:33:53
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -37,9 +37,9 @@ title = Northwest Georgia Scanner
 url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
-match = -338.5%%
-title = Matto ki Saikil Official Trailer | Prakash Jha | M. Gani | In ...
-url = https://www.youtube.com/watch?v=wwH3mdjbKac
+match = -238.5%%
+title = Gani Lawal Posts 14 Points, 14 Rebounds vs. Sky Force
+url = https://www.youtube.com/watch?v=tJOSML4nQWo
 
 [www.regmovies.com]
 match = -215.4%%
