--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-06 04:27:29
+lastsearch = 2024-08-06 10:40:09
 
 [everonvn.com.vn]
 match = -11.1%%
@@ -12,9 +12,9 @@ title = Bộ Everon Ep1831 - Curtis
 url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
 
 [www.lazada.vn]
-match = -161.1%%
-title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
+match = -133.3%%
+title = [FREESHIP MAX] Vỏ gối ôm satin cao cấp [Bear Bedding]
+url = https://www.lazada.vn/products/freeship-max-vo-goi-om-satin-cao-cap-bear-bedding-i2125036248.html
 
 [www.reddit.com]
 match = -150.0%%
@@ -22,9 +22,9 @@ title = How do you get Vietnamese VỎ GỐI & gối ôm in the USA?
 url = https://www.reddit.com/r/VietNam/comments/11el4ie/how_do_you_get_vietnamese_vỏ_gối_gối_ôm_in_the_usa/
 
 [www.facebook.com]
-match = -27.8%%
-title = Chăn ga gối đệm giá rẻ Tiên Tiên
-url = https://www.facebook.com/chuyensigagoi/?locale=et_EE
+match = -83.3%%
+title = Chăn ga gối đệm giá rẻ Tiên Tiên | Da Nang
+url = https://www.facebook.com/chuyensigagoi/
 
 [muathongminh.vn]
 match = -144.4%%
@@ -32,14 +32,14 @@ title = Lịch sử giá 🥑 Vỏ gối đầu cotton poly 45x65 🥑 áo gối
 url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-nhieu-mau-sac-mau-bo-xam-duoc-chon-mau-p.1__19609304624__137416996
 
 [www.diepxuan.com]
-match = -11.1%%
-title = Vỏ gối EPM21065 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-epm21065-45x65.html
+match = -33.3%%
+title = Vỏ gối kê WarmDream 45x65 HQ - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html
 
 [www.everonqb.com]
 match = -111.1%%
-title = Vỏ gối EPM21065 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-epm21065-45x65.html
+title = Vỏ gối EPM20064 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-epm20064-45x65.html
 
 [shopee.vn]
 match = -127.8%%
